add vn translation tousaku tracks

--- a/(2020) Plagiarism/02. Burglar.md
+++ b/(2020) Plagiarism/02. Burglar.md
@@ -1,21 +1,23 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-昼鳶 | Hirutonbi
+昼鳶 | Hirutonbi | Trộm ban ngày
 #### Lyrics
 
-| Japanese                                                                   | Romanji                                                                                                                                                    | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                               |
-| -------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 器量、才覚、価値観<br><br>骨の髄まで全部妬ましい<br><br>心全部満たしたい<br><br>嫉む脳裏は舌打ちばかり            | Kiryō, saikaku, kachikan<br><br>Hone no zui made zenbu netamashii<br><br>Kokoro zenbu mitashitai<br><br>Sonemu nōri wa shitauchi bakari                    | Good looks, wits, a sense of values<br><br>I envy it all down to the bone<br><br>I wanna fill my whole heart<br><br>But my jealous mind keeps on clicking its tongue [[#^1]]                            |
-| 誇大広告勝り、世は死に体の音楽ばかり<br><br>君の全部妬ましい<br><br>浅ましいこの心根が疼くばかり                   | Kodai kōkoku masari, yo wa shinitei no ongaku bakari<br><br>Kimi no zenbu netamashii<br><br>Asamashii kono kokorone ga uzuku bakari                        | Even better than false advertising, the world is filled with nothing but hopeless music [[#^2]]<br><br>I'm envious of everything about you<br><br>This wretched nature at my heart keeps on aching      |
-| つまらないものだけが観たいのさ<br><br>夜の全部が僕は欲しい<br><br>ただやるせないから歌にしたい<br><br>この渇きを言い訳にさぁ | Tsumaranai mono dake ga mitai no sa<br><br>Yoru no zenbu ga boku wa hoshii<br><br>Tada yarusenai kara uta ni shitai<br><br>Kono kawaki wo iiwake ni saa    | I just wanna look at only the boring things [[#^3]]<br><br>All of the night is what I want<br><br>I can't help that desire, so I wanna put it to song<br><br>Turning this thirst into an excuse, ya see |
-| 夜景、ダイヤの光、笑みで住宅街を見下し<br><br>素晴らしきその暮らし<br><br>さぁ幸せはお幾らばかり？                  | Yakei, daiya no hikari, emi de jūtakugai o mikudashi<br><br>Subarashiki sono kurashi<br><br>Saa, shiawase wa oikura bakari?                                | Night skyline, the light from a timetable, looking down on the residential district with a smile<br><br>What a wonderful living they have<br><br>Well now, is happiness something they pay for?         |
-| この妬みは疎ましいばかり                                                               | Kono netami wa utomashii bakari                                                                                                                            | This envy is nothing but distancing                                                                                                                                                                     |
-| つまらないものだけが観たいのさ<br><br>他人の全部を馬鹿にして<br><br>忘れたいのに胸が痛い<br><br>ただ何も無いから僕は欲しい  | Tsumaranai mono dake ga mitai no sa<br><br>Hito no zenbu wo baka ni shite<br><br>Wasuretai noni mune ga itai<br><br>Tada nani mo nai kara boku wa hoshii   | I just wanna look at only the boring things<br><br>Making fun of everyone else<br><br>Even though I wanna forget, my chest hurts<br><br>I want it because it's nothing special                          |
-| つまらないものだけが観たいのさ<br><br>君の全部が僕は欲しい<br><br>ただ何も無いから僕は欲しい<br><br>この渇きを言い訳にさぁ  | Tsumaranai mono dake ga mitai no sa<br><br>Kimi no zenbu ga boku wa hoshii<br><br>Tada nani mo nai kara boku wa hoshii<br><br>Kono kawaki wo iiwake ni saa | I just wanna look at only the boring things<br><br>All of you is what I want<br><br>Because it's nothing special, I want it<br><br>Turning this thirst into an excuse, ya see                           |
+| Japanese                                                                   | Romanji                                                                                                                                                    | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                               | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^4]]                                                                                                                              |
+| -------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 器量、才覚、価値観<br><br>骨の髄まで全部妬ましい<br><br>心全部満たしたい<br><br>嫉む脳裏は舌打ちばかり            | Kiryō, saikaku, kachikan<br><br>Hone no zui made zenbu netamashii<br><br>Kokoro zenbu mitashitai<br><br>Sonemu nōri wa shitauchi bakari                    | Good looks, wits, a sense of values<br><br>I envy it all down to the bone<br><br>I wanna fill my whole heart<br><br>But my jealous mind keeps on clicking its tongue [[#^1]]                            | Dung mạo, sự nhạy bén, rồi giá trị quan<br><br>Ta ghen tức với những thứ đó đến tận xương tủy<br><br>Ta muốn lấp đầy trái tim này<br><br>Cảm giác tiếc nuối xâm lấn trong tâm trí hậm hực                  |
+| 誇大広告勝り、世は死に体の音楽ばかり<br><br>君の全部妬ましい<br><br>浅ましいこの心根が疼くばかり                   | Kodai kōkoku masari, yo wa shinitei no ongaku bakari<br><br>Kimi no zenbu netamashii<br><br>Asamashii kono kokorone ga uzuku bakari                        | Even better than false advertising, the world is filled with nothing but hopeless music [[#^2]]<br><br>I'm envious of everything about you<br><br>This wretched nature at my heart keeps on aching      | Quảng cáo phóng đại thì nhan nhản, thứ âm nhạc “xác sống” lấn chiếm thế giới<br><br>Ta ghen ghét tất cả mọi thứ thuộc về ngươi<br><br>Chúng dày vò tâm can hèn hạ này của ta                               |
+| つまらないものだけが観たいのさ<br><br>夜の全部が僕は欲しい<br><br>ただやるせないから歌にしたい<br><br>この渇きを言い訳にさぁ | Tsumaranai mono dake ga mitai no sa<br><br>Yoru no zenbu ga boku wa hoshii<br><br>Tada yarusenai kara uta ni shitai<br><br>Kono kawaki wo iiwake ni saa    | I just wanna look at only the boring things [[#^3]]<br><br>All of the night is what I want<br><br>I can't help that desire, so I wanna put it to song<br><br>Turning this thirst into an excuse, ya see | Ta chỉ muốn ngắm nhìn những thứ tẻ nhạt thôi<br><br>Ta muốn thu về mọi thứ trong màn đêm<br><br>Nhưng chỉ vì cùng cực nên ta mượn cơn thèm khát này<br><br>Đem nó cất lên thành lời ca                     |
+| 夜景、ダイヤの光、笑みで住宅街を見下し<br><br>素晴らしきその暮らし<br><br>さぁ幸せはお幾らばかり？                  | Yakei, daiya no hikari, emi de jūtakugai o mikudashi<br><br>Subarashiki sono kurashi<br><br>Saa, shiawase wa oikura bakari?                                | Night skyline, the light from a timetable, looking down on the residential district with a smile<br><br>What a wonderful living they have<br><br>Well now, is happiness something they pay for?         | Đêm xuống, kim cương lấp lánh, ta cười khẩy nhìn xuống khu phố<br><br>Ôi chao cuộc sống đó tươi đẹp làm sao!<br><br>Hạnh phúc ấy bán bao nhiêu tiền thế?                                                   |
+| この妬みは疎ましいばかり                                                               | Kono netami wa utomashii bakari                                                                                                                            | This envy is nothing but distancing                                                                                                                                                                     | Ta ghê tởm sự đố kị này                                                                                                                                                                                    |
+| つまらないものだけが観たいのさ<br><br>他人の全部を馬鹿にして<br><br>忘れたいのに胸が痛い<br><br>ただ何も無いから僕は欲しい  | Tsumaranai mono dake ga mitai no sa<br><br>Hito no zenbu wo baka ni shite<br><br>Wasuretai noni mune ga itai<br><br>Tada nani mo nai kara boku wa hoshii   | I just wanna look at only the boring things<br><br>Making fun of everyone else<br><br>Even though I wanna forget, my chest hurts<br><br>I want it because it's nothing special                          | Vì ta chỉ muốn ngắm nhìn những thứ tẻ nhạt thôi<br><br>Loài người tất cả đều là trò cười trong mắt ta<br><br>Ta muốn quên đi nhưng trái tim này vẫn đau thắt<br><br>Vì không có gì cả nên ta mới khát khao |
+| つまらないものだけが観たいのさ<br><br>君の全部が僕は欲しい<br><br>ただ何も無いから僕は欲しい<br><br>この渇きを言い訳にさぁ  | Tsumaranai mono dake ga mitai no sa<br><br>Kimi no zenbu ga boku wa hoshii<br><br>Tada nani mo nai kara boku wa hoshii<br><br>Kono kawaki wo iiwake ni saa | I just wanna look at only the boring things<br><br>All of you is what I want<br><br>Because it's nothing special, I want it<br><br>Turning this thirst into an excuse, ya see                           | Ta chỉ muốn ngắm nhìn những thứ tẻ nhạt thôi<br><br>Ta muốn có tất cả mọi thứ của ngươi<br><br>Chính vì không có gì cả nên ta mới mong muốn nó<br><br>Đem cơn thèm khát này ra nói lên điều đó             |
 ##### Notes
 >In case this is culturally lost, clicking your tongue is a sign of general annoyance. In this case it is because of envy. ^1
 
 >This is wordplay. Spoken it’s “dead music” (or rather, “music resembling death”), the written meaning is "music about a hopelessly losing position". What I wrote down is the middle ground between the two. ^2
 
 >The particle here, のさ (or really just さ), is often used by the Plagiarist and is a bit hard to translate in its entirety. It has the particular nuance of knowing something isn't seen favorably, but asserting it anyways. In this case, it means "I know I shouldn't be fixated on the boring things, but I am." ^3
+
+> Giải thích lời bài hát: Bài hát này được đặt đầu tiên để mở đầu album, sau track “Lời tự bạch của tên trộm âm nhạc”, bởi vậy có thể coi đây là lời tự bạch của tên trộm và hắn tự nhận mình là “Trộm ban ngày”. Tại sao lại là “trộm ban ngày” mà không phải “trộm ban đêm”? Nếu các bạn có theo dõi hết 3 video vietsub trên kênh thì các bạn đều sẽ biết tên trộm này khao khát chiêm ngưỡng 1 màn đêm tuyệt vời nhất trong đời, và để làm được điều đó thì phải vứt bỏ mọi thứ và chết theo cách đẹp đẽ nhất. Nhưng trong bài này, ở lời 1 thì nói là “ta muốn thu về hết mọi thứ trong màn đêm” tức là ý chí ban đầu của tên trộm, nhưng sang đến lời 2 thì “muốn quên đi nhưng trái tim lại đau thắt”, tức là con tim anh ta chối bỏ ý chí ban đầu, đến điệp khúc cuối thì “ta muốn có tất cả mọi thứ của ngươi”. Tức là thứ mà anh ta thật sự mong muốn không phải là cái chết diễm lệ, mà chính là thứ hạnh phúc tầm thường của con người mà anh ta ra sức chế giễu từ đầu đến cuối bài hát “hạnh phúc đó bán bao nhiêu tiền thế?”. Bởi vậy có thể hiểu, tên trộm âm nhạc thực ra cũng có những mong muốn tầm thường của con người, và vì thế nên anh ta tự nhận mình là tên trộm ban ngày, tức là đi nghe ngóng thế gian để ăn trộm chất liệu cho sáng tác của mình. Và điều này bạn sẽ thấy ở track tiếp theo, “Bán xuân”. À và có 1 từ hay ho trong lời bài hát, đó là thứ âm nhạc “xác sống”. Từ “xác sống” này trong tiếng Nhật là shinitai, một thuật ngữ dùng trong sumo. Xác sống là tư thế sumo bị quật ngã, 2 bàn chân với ngón chân hướng lên trời và không thể đứng dậy được nữa. Khi bị tiếp đất với tư thế này đương nhiên sumo sẽ bị xử thua. Trong bài này khi dùng từ xác sống để miêu tả âm nhạc, ý n-buna đó là thứ âm nhạc mục rữa đến mức không thể quay đầu lại nữa. Cách dùng từ rất hay nên mình giải thích thêm cho vui =)) ^4
