--- a/(2020) Plagiarism/03. Prostitution.md
+++ b/(2020) Plagiarism/03. Prostitution.md
@@ -1,19 +1,19 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-春ひさぎ | Haru Hisagi [[#^title]]
+春ひさぎ | Haru Hisagi [[#^title]] | Bán xuân
 #### Lyrics
 
-| Japanese                                                                                                        | Romanji                                                                                                                                                                                                                               | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                   |
-| --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 大丈夫だよ大丈夫<br><br>寝てれば何とかなるし<br><br>どうしたんだいそんな顔してさぁ<br><br>別にどうともないよ                                              | Daijōbu da yo daijōbu<br><br>Netereba nantoka naru shi<br><br>Dō shita n dai sonna kao shite saa<br><br>Betsuni dō to mo nai yo                                                                                                       | Everything's ok, it's fine<br><br>If you sleep it'll work itself out, so<br><br>What's up with you making that face, hey<br><br>It's nothing special you know                                                                                                                                                               |
-| 駅前で愛を待ち惚け<br><br>他にすることもないし<br><br>不誠実の価値も教えてほしいわ                                                               | Ekimae de ai wo machibōke<br><br>Hoka ni suru koto mo nai shi<br><br>Fuseijitsu no kachi mo oshiete hoshii wa                                                                                                                         | Waiting in vain for love in front of the station<br><br>I got nothing better to do anyway<br><br>I wanna be taught the value of insincerity as well                                                                                                                                                                         |
-| 言勿れ　愛など忘れておくんなまし<br><br>苦しい事だって何でも教えておくれ<br><br>左様な蜻蛉の一つが善いなら忘れた方が増し<br><br>詮の無いことばかり聞いてられないわ<br><br>言いたくないわ    | Kotonakare ai nado wasureteoku n namashi<br><br>Kurushii koto datte nan demo oshiete okure<br><br>Sayōna kagerou no hitotsu ga ii nara wasureta hō ga mashi<br><br>Sen no nai koto bakari kiiterarenai wa<br><br>Iitakunai wa         | Say no more [[#^1]], release yourself from the bonds of love [[#^2]]<br><br>Let me know about anything, even if it's something painful<br><br>If one mayfly such as that should suffice, I would have rather forgotten it [[#^3]]<br><br>I can't just listen to worthless things all the time<br><br>I don't want to say it |
-| 大丈夫どれだけも吐いても<br><br>言葉は言い足りないし<br><br>どうしたんだいあんたにわかるかい<br><br>この憂いが                                             | Daijōbu dore dake mo haite mo<br><br>Kotoba wa ii tarinai shi<br><br>Dō shita n dai anta ni wakaru kai<br><br>Kono urei ga                                                                                                            | It's fine, no matter how much you spit it up<br><br>There won't be enough words to say, so<br><br>What's up with you, do you even get it<br><br>This anguish, that is                                                                                                                                                       |
-| 玄関で愛を待ち惚け<br><br>囁く声で喘いで<br><br>後悔の悔を教えてほしいわ                                                                    | Genkan de ai wo machibōke<br><br>Sasayaku koe de aeide<br><br>Kōkai no kai wo oshiete hoshii wa                                                                                                                                       | Waiting in vain for love in the entryway<br><br>I gasp in a whispered voice<br><br>I wanna be taught the "penance" of repentance [[#^4]]                                                                                                                                                                                    |
-| 陽炎や　今日などどうか忘れておくんなまし<br><br>悲しい事無しの愛だけ歌っておくれ<br><br>終いは口付け一つが善いのも言わない方が増し<br><br>詮の無いことでも忘れられないわ<br><br>知りたくないわ | Kagerō ya kyō nado dōka wasureteoku n namashi<br><br>Kanashii kotonashi no ai dake utatte okure<br><br>Shimai wa kuchizuke hitotsu ga ii no mo iwanai hō ga mashi<br><br>Sen no nai koto demo wasurerarenai wa<br><br>Shiritakunai wa | By all means, release yourself from the bonds of today and the heat haze<br><br>Sing to me about just love without the sadness, please<br><br>I would also rather not say that, for the finish, a lone kiss should suffice<br><br>I can't forget even the worthless things<br><br>I don't want to know                      |
-| 陽炎や　今日などいつか忘れてしまうのでしょう？苦しいの<br><br>左様な躊躇いの一つが愛なら知らない方が増し<br><br>詮の無いことだって聞かせてもっと                                | Kagerō ya kyō nado itsuka wasureteshimau no deshō? kurushii no<br><br>Sayōna tamerai no hitotsu ga ai nara shiranai hō ga mashi<br><br>Sen no nai koto datte kikasete motto                                                           | Will I one day forget about things like today and the heat haze? It's painful<br><br>If a moment of hesitation such as that is love, then I would rather not know of it<br><br>Tell me worthless things, more                                                                                                               |
-| 言勿れ　明日など忘れておくんなまし<br><br>苦しい事だって何度も教えておくれ<br><br>無粋な蜻蛉の一つでいいから、溺れるほどに欲しい<br><br>詮の無いことだって聞かせてもっと<br><br>愛して欲しいわ | Kotonakare asu nado wasureteoku n namashi<br><br>Kurushii koto datte nandomo oshiete okure<br><br>Busuina kagerou no hitotsu de ii kara, oboreru hodo ni hoshii<br><br>Sen no nai koto datte kikasete motto<br><br>Aishite hoshii wa  | Say no more, release yourself from the bonds of tomorrow<br><br>Let me know about the painful things over and over<br><br>One boorish mayfly is enough ok, I'm drowning in how much I need it<br><br>Tell me worthless things, more<br><br>I want to love                                                                   |
+| Japanese                                                                                                        | Romanji                                                                                                                                                                                                                               | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                   | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^5]]                                                                                                                                                                                                                                                   |
+| --------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 大丈夫だよ大丈夫<br><br>寝てれば何とかなるし<br><br>どうしたんだいそんな顔してさぁ<br><br>別にどうともないよ                                              | Daijōbu da yo daijōbu<br><br>Netereba nantoka naru shi<br><br>Dō shita n dai sonna kao shite saa<br><br>Betsuni dō to mo nai yo                                                                                                       | Everything's ok, it's fine<br><br>If you sleep it'll work itself out, so<br><br>What's up with you making that face, hey<br><br>It's nothing special you know                                                                                                                                                               | Không sao đâu, mọi thứu sẽ ổn thôi<br><br>Ngủ một giấc là đâu sẽ có đó<br><br>"Cô làm sao thế, trông mặt lại thế kia?"<br><br>"Không, chẳng có vấn đề gì to tát hết!"                                                                                                                                                           |
+| 駅前で愛を待ち惚け<br><br>他にすることもないし<br><br>不誠実の価値も教えてほしいわ                                                               | Ekimae de ai wo machibōke<br><br>Hoka ni suru koto mo nai shi<br><br>Fuseijitsu no kachi mo oshiete hoshii wa                                                                                                                         | Waiting in vain for love in front of the station<br><br>I got nothing better to do anyway<br><br>I wanna be taught the value of insincerity as well                                                                                                                                                                         | Ta đứng trước nhà ga ngóng đợi tình yêu<br><br>Dù sao cũng chẳng có chuyện gì khác để làm cả<br><br>Ngài hãy nói cho ta biết giá trị của sự giả dối đi!                                                                                                                                                                         |
+| 言勿れ　愛など忘れておくんなまし<br><br>苦しい事だって何でも教えておくれ<br><br>左様な蜻蛉の一つが善いなら忘れた方が増し<br><br>詮の無いことばかり聞いてられないわ<br><br>言いたくないわ    | Kotonakare ai nado wasureteoku n namashi<br><br>Kurushii koto datte nan demo oshiete okure<br><br>Sayōna kagerou no hitotsu ga ii nara wasureta hō ga mashi<br><br>Sen no nai koto bakari kiiterarenai wa<br><br>Iitakunai wa         | Say no more [[#^1]], release yourself from the bonds of love [[#^2]]<br><br>Let me know about anything, even if it's something painful<br><br>If one mayfly such as that should suffice, I would have rather forgotten it [[#^3]]<br><br>I can't just listen to worthless things all the time<br><br>I don't want to say it | Đừng nói về dăm ba cái tình yêu nữa, hãy quên nó đi!<br><br>Hãy cho ta biết mọi thứ, dẫu có là điều khiến ngài đau khổ đi chăng nữa<br><br>Nếu người đời không mảy may đến một con phù du như thế, vậy thì thà quên nó đi còn hơn<br><br>Ta không thể nào nghe mãi những điều vô ích đó được<br><br>Ta không muốn nói về nó đâu |
+| 大丈夫どれだけも吐いても<br><br>言葉は言い足りないし<br><br>どうしたんだいあんたにわかるかい<br><br>この憂いが                                             | Daijōbu dore dake mo haite mo<br><br>Kotoba wa ii tarinai shi<br><br>Dō shita n dai anta ni wakaru kai<br><br>Kono urei ga                                                                                                            | It's fine, no matter how much you spit it up<br><br>There won't be enough words to say, so<br><br>What's up with you, do you even get it<br><br>This anguish, that is                                                                                                                                                       | Không sao đâu, vì dù ta có thổ lộ bao nhiêu đi chăng nữa<br><br>Ta sẽ chẳng bao giờ nói hết được lòng mình<br><br>"Ta làm sao thế này? Ngài liệu có thể hiểu được không?"<br><br>"Nỗi đau dày xé trong ta"                                                                                                                      |
+| 玄関で愛を待ち惚け<br><br>囁く声で喘いで<br><br>後悔の悔を教えてほしいわ                                                                    | Genkan de ai wo machibōke<br><br>Sasayaku koe de aeide<br><br>Kōkai no kai wo oshiete hoshii wa                                                                                                                                       | Waiting in vain for love in the entryway<br><br>I gasp in a whispered voice<br><br>I wanna be taught the "penance" of repentance [[#^4]]                                                                                                                                                                                    | Ta chờ đợi tình yêu đến trước thềm nhà<br><br>Thở gấp bằng giọng thì thào:<br><br>"Ngài liệu có thể nói cho ta biết thế nào là "hối" trong "hối hận" không?"                                                                                                                                                                    |
+| 陽炎や　今日などどうか忘れておくんなまし<br><br>悲しい事無しの愛だけ歌っておくれ<br><br>終いは口付け一つが善いのも言わない方が増し<br><br>詮の無いことでも忘れられないわ<br><br>知りたくないわ | Kagerō ya kyō nado dōka wasureteoku n namashi<br><br>Kanashii kotonashi no ai dake utatte okure<br><br>Shimai wa kuchizuke hitotsu ga ii no mo iwanai hō ga mashi<br><br>Sen no nai koto demo wasurerarenai wa<br><br>Shiritakunai wa | By all means, release yourself from the bonds of today and the heat haze<br><br>Sing to me about just love without the sadness, please<br><br>I would also rather not say that, for the finish, a lone kiss should suffice<br><br>I can't forget even the worthless things<br><br>I don't want to know                      | Hơi nóng của mùa hè, và ngày hôm nay nữa, hãy quên chúng đi<br><br>Hãy chỉ hát về những câu chuyện tình không có đau thương mà thôi<br><br>Cũng đừng nói về những cái kết đẹp bằng một nụ hôn nữa<br><br>Vì ta chẳng thể nào quên được những điều vô ích trong đời<br><br>Ta không muốn biết đến những thứ dối trá nữa          |
+| 陽炎や　今日などいつか忘れてしまうのでしょう？苦しいの<br><br>左様な躊躇いの一つが愛なら知らない方が増し<br><br>詮の無いことだって聞かせてもっと                                | Kagerō ya kyō nado itsuka wasureteshimau no deshō? kurushii no<br><br>Sayōna tamerai no hitotsu ga ai nara shiranai hō ga mashi<br><br>Sen no nai koto datte kikasete motto                                                           | Will I one day forget about things like today and the heat haze? It's painful<br><br>If a moment of hesitation such as that is love, then I would rather not know of it<br><br>Tell me worthless things, more                                                                                                               | Hơi nóng của mùa hè và ngày hôm nay, một ngày nào đó ta sẽ quên mất sao?<br>Thật là đau đớn mà<br><br>Nếu sự ngập ngừng đó người ta gọi là "tình yêu", vậy thì ta thà không biết còn hơn!<br><br>Hãy kể thêm về những điều tưởng như vô ích nữa đi!                                                                             |
+| 言勿れ　明日など忘れておくんなまし<br><br>苦しい事だって何度も教えておくれ<br><br>無粋な蜻蛉の一つでいいから、溺れるほどに欲しい<br><br>詮の無いことだって聞かせてもっと<br><br>愛して欲しいわ | Kotonakare asu nado wasureteoku n namashi<br><br>Kurushii koto datte nandomo oshiete okure<br><br>Busuina kagerou no hitotsu de ii kara, oboreru hodo ni hoshii<br><br>Sen no nai koto datte kikasete motto<br><br>Aishite hoshii wa  | Say no more, release yourself from the bonds of tomorrow<br><br>Let me know about the painful things over and over<br><br>One boorish mayfly is enough ok, I'm drowning in how much I need it<br><br>Tell me worthless things, more<br><br>I want to love                                                                   | Đừng nói về ngày mai nữa, hay quên nó đi!<br><br>Ta muốn nghe nhiều hơn dẫu cho đó có là những thứ khiến ngài đau khổ!<br><br>Dẫu đó chỉ là một con phù du thô kệch đi nữa<br>Ôi ta ao ước đến vô ngần<br><br>Hãy kể thêm về những điều tưởng như vô ích nữa đi!<br><br>Ta cũng muốn được yêu thương                            |
 ##### Notes
 >The official translation is “Prostitution”, and that’s absolutely correct, but the phrase used is a euphemistic and archaic way of saying it which doesn’t make it nearly as obvious as simply “prostitution”. I tried to find an English equivalent and failed, so it stays “Spring Selling” for me. ^title
 
@@ -24,3 +24,15 @@ await dv.view('_script');
 >There is a ridiculous amount of wordplay going on here. “Mayfly” and “heat haze” are homophones (both are “kagerou”). A strange phrase is also used here, “sayou na”, which is part of the phrase “sayounara”. The meaning of it all is explained in the full analysis document. ^3
 
 >This is even more wordplay. It’s explicitly “I want to learn the ‘kai’ of ‘koukai’ (koukai means regret)”. The kanji here, 後悔, is “after” (kou) + “repent” (kai). You may interpret what this means. ^4
+
+> Vậy là các bạn đã hiểu tên bài hát “Haru hisagi” chính là “bán rẻ bản thân” rồi. Và sau đây sẽ đi vào phân tích lời bài hát và MV nhé. 
+> 
+> Trong MV nhân vật chính được xây dựng với hình tượng một con quái vật đi phá phách khắp nơi để ăn cắp ý tưởng của đại chúng và sáng tác nhạc để bán đi kiếm tiền. Nên các bạn sẽ thấy con đường input của nó là “ăn” và output là âm nhạc.
+> 
+> Tổng thể nội dung của cả bài này là một cuộc hội thoại giữa một người nhạc sĩ và 1 “vị khách” được anh ta hỏi về ý tưởng viết nhạc (trong bài có đoạn mình dịch nhầm thành "cô" do lúc đó chưa có tiểu thuyết, nhưng người nhạc sĩ này là nam nhé). Ở lời 1 thì bài hát khắc họa tâm trạng của nhân vật chính trong chuỗi ngày đi ăn cắp ý tưởng, mặc dù biết rõ rằng việc làm đó chính là biểu hiện của giả dối nhưng vẫn phải làm, cuộc sống mà. Và đến điệp khúc 1 thì có xuất hiện câu thoại là “Đừng nói về dăm ba cái tình yêu nữa, hãy quên nó đi!”.Tình yêu mang tính cá nhân, hay còn gọi là tình yêu thật sự ấy, thì nó lại không đẻ ra tiền (những điều vô ích), vì nó không hợp với thị hiếu đại chúng. Bởi vậy nên cho dù có mong chờ tình yêu đến với mình nhưng người nhạc sĩ vẫn phải gạt qua nó để lăn lộn trong cuộc sống. 
+> 
+> Sang đến phần lời 2, ở trong MV bạn sẽ thấy con quái vật ban đầu có 2 mắt giờ đã chuyển sang còn có 1 mắt. Nó biến dạng là do sự căm phẫn với chính bản thân mình vì đã viết ra những lời giả dối, những ca từ không nói thật lòng mình. Nhạc sĩ quyết định quay lại với giá trị thật của bản thân. Và nhạc sĩ đã hỏi vị khách là “Ngài liệu có thể nói cho ta biết thế nào là “hối” trong “hối hận” không?”, câu này có nghĩa là người nhạc sĩ đã quyết định quay trở lại làm chính mình và viết ra những gì mình muốn viết, và không hề thấy hối hận. Vậy nên ở lời 1 từ câu “Hãy cho ta biết mọi thứ, dẫu có là điều khiến ngài đau khổ đi chăng nữa” thì sang lời 2 nó đã chuyển thành “Hãy chỉ hát về những câu chuyện tình không có đau thương mà thôi!”. Và chính những thứ vô ích không đẻ ra tiền mới chính là giá trị thật sự của một con người, bởi vậy nên dù cố cũng không thể quên được. Ở trong MV bạn có thể để ý là ở lời 1 có cảnh con quái vật đi giữa cảnh sắc mùa xuân (bán xuân) thì sang lời 2 nó đã đi sang thành phố, tức là không còn bán rẻ bản thân nữa. Nhưng làm thế đồng nghĩa với việc cuộc sống sẽ khó khăn hơn, nên để ý kĩ thì tất cả các đèn giao thông trong cảnh con quái vật đi giữa thành phố đều đang ở màu đỏ. Đi bộ khi đèn đỏ rất nguy hiểm phải không nào.
+> 
+> Đến đoạn cuối thì người nhạc sĩ đã hoàn toàn làm chủ được bản thân, quay về với giá trị đích thực của mình và khao khát tình yêu đến cùng cực. Cho nên ở đoạn này hình dạng biến dị của con quỷ đã sụp đổ.
+> 
+> Còn có 1 cái rất hay đó là cách chơi chữ trong bài hát. Trong bài này có xuất hiện 2 hình ảnh là “con phù du” và “hơi nóng của mùa hè”. 2 từ này trong tiếng Nhật đều đọc là kagerou. Con phù du là 1 loại côn trùng mà khi còn là trứng thì nó sống dưới nước trong khoảng 3 năm nhưng khi đã thành bướm nó sẽ bay lên bờ, giao phối và chết ngay sau đó, phù du trưởng thành thường chỉ có thể sống trong 3 tiếng đồng hồ. Còn cái hơi nóng của mùa hè chính là cái hơi nóng bốc lên từ mặt đường khiến chúng ta có ảo giác là mặt đường ướt sũng nước. Cả 2 hình ảnh này đều có chung 1 đặc điểm là “mong manh, tan biến”. Đây là hình ảnh ẩn dụ ám chỉ những giá trị thật sự của con người thì thường sẽ không thể được hát thành lời, nó sẽ chết yểu và một ngày nào đó chúng ta sẽ quên mất nó vì những bộn bề cuộc sống. Nhưng dẫu thế người nhạc sĩ vẫn khao khát có được những thứ mong manh đó, bởi như vậy mới là thực sự sống. ^5
