--- a/(2020) Plagiarism/04. Bomber.md
+++ b/(2020) Plagiarism/04. Bomber.md
@@ -1,25 +1,25 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-爆弾魔 | Bakudanma **Re-Recording**
+爆弾魔 | Bakudanma | Kẻ cuồng bom **Re-Recording**
 #### Lyrics
 EJ/Bluepenguin translation [[03. Compulsive Bomber]]
 
-| Japanese                                                            | Romanji                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                               |
-| ------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 死んだ眼で爆弾片手に口を開く<br><br>さよならだ人類、みんな吹き飛んじまえ                            | shinda me de bakudan katate ni kuchi o hiraku<br><br>sayonara da jinrui, minna fukitonjimae                                            | With dead eyes and a bomb in one hand, I open my mouth<br><br>It's farewell humanity, I'm blowing everyone all away                                                     |
-| 泣いた顔で爆弾片手　夜が苦しい<br><br>安っぽいナイトショーのワンシーンみたいな夢が見たい                    | naita kao de bakudan katate yoru ga kurushii<br><br>yasuppoi NAITO SHOO no WANSHIIN mitai na yume ga mitai                             | With a crying face and a bomb in one hand, the night is painful<br><br>I wanna have a dream that's like a scene from a shitty late night show                           |
-| 今日も出来ませんでした<br><br>今日もやれませんでした<br><br>青春の全部を爆破したい<br><br>君のことを歌にしたい | kyou mo dekimasen deshita<br><br>kyou mo yaremasen deshita<br><br>seishun no zenbu o bakuha shitai<br><br>kimi no koto o uta ni shitai | I was not able to do it today again<br><br>I was not willing to do it today again<br><br>I wanna destroy all of youth<br><br>I want to turn you into song               |
-| この日々を爆破して<br><br>心ごと爆破して<br><br>ずるいよ、優しさってやつちらつかせてさ　ずるいよ全部          | kono hibi o bakha shite<br><br>kokorogoto bakuha shite<br><br>zurui yo, yasashisa tte yatsu chiratsukasete sa zurui yo zenbu           | Blowing up these days,<br><br>Blowing up my emotions,<br><br>It's so unfair, you dangeling your kindness in front of me, it's just so unfair, all of it                 |
-| この部屋を爆破したい<br><br>夢がなきゃ生きられない<br><br>だから今、さよならだ<br><br>吹き飛んじまえ      | kono heya o bakuha shitai<br><br>yume ga nakya ikirarenai<br><br>dakara ima, sayonara da<br><br>fukitonjimae                           | I wanna blow up this room<br><br>You can't live without dreams<br><br>And that's why now, it's farewell<br><br>Blow it all away                                         |
-| 死んだ目で爆弾片手に街を歩く<br><br>誰も見向きもしないんだ　爆弾を翳したとて                          | shinda me de bakudan katate ni machi o aruku<br><br>daremo mimuki mo shinai n’da bakudan o kazashita tote                              | With dead eyes and a bomb in one hand, I walk down the street<br><br>No one's even looking at me, even though I'm holding up a bomb                                     |
-| ずっと泣けませんでした<br><br>ずっと笑えませんでした<br><br>青春の全部に君がいる<br><br>風が吹けば花が咲く   | zutto nakemasen deshita<br><br>zutto waraemasen deshita<br><br>seishun no zenbu ni kimi ga iru<br><br>kaze ga fukeba hana ga saku      | I have never been able to cry<br><br>I have never been able to laugh<br><br>You're there within all my youth<br><br>If the wind blows, flowers will bloom               |
-| あの夏を爆破して<br><br>思い出を爆破して<br><br>酷いよ、君自身は黙って消えたくせに<br><br>酷いよ全部      | ano natsu o bakuha shite<br><br>omoide o bakuha shite<br><br>hidoi yo, kimi jishin wa damatte kieta kuse ni<br><br>hidoi yo zenbu      | Blowing up that summer<br><br>Blowing up my memories<br><br>It's so cruel, all because you silently disappeared all on your own, it's so cruel, all of it               |
-| この街を爆破したい<br><br>このままじゃ生きられない<br><br>だから今、さよならだ<br><br>吹き飛んじまえ      | kono machi o bakuha shitai<br><br>kono mama ja ikirarenai<br><br>dakara ima, sayonara da<br><br>fukitonjimae                           | I wanna blow up this town<br><br>I just can't keep living like this<br><br>And that's why now, it's farewell<br><br>Blow it all away                                    |
-| もっと笑えばよかった<br><br>ずっと戻りたかった<br><br>青春の全部に散れば咲け<br><br>散れば咲けよ百日紅     | motto waraeba yokatta<br><br>zutto modoritakatta<br><br>seishun no zenbu ni chireba sake<br><br>chireba sake yo sarusuberi             | I would have liked to smile more<br><br>I always wanted to go back<br><br>If all my youth is scattered, then bloom<br><br>If it's scattered then bloom, oh crape myrtle |
-| この日々を爆破して<br><br>心ごと爆破して<br><br>辛くてもいい　苦しさも全部僕のものだ　わかってるんだ          | kono hibi o bakuha shite<br><br>kokorogoto bakuha shite<br><br>tsurakute mo ii kurushisa mo zenbu boku no mono da wakatte’ru n’da      | Blowing up these days,<br><br>Blowing up my emotions,<br><br>I don't care if it's heartbreaking, the suffering and everything else are mine, I get it!                  |
-| この星を爆破したい<br><br>君を消せるだけでいい<br><br>今しかない、いなくなれ                      | kono hoshi o bakuha shitai<br><br>kimi o keseru dake de ii<br><br>ima shika nai, inaku nare                                            | I wanna blow up this planet<br><br>So long as I can erase you<br><br>It's now or never, disappear!                                                                      |
-| この日々を爆破して<br><br>心ごと爆破して<br><br>ずるいよ、優しさってやつちらつかせてさ　ずるいよ全部          | kono hibi o bakuha shite<br><br>kokorogoto bakuha shite<br><br>zurui yo, yasashisa tte yatsu chiratsukasete sa zurui yo zenbu          | Blowing up these days,<br><br>Blowing up my emotions,<br><br>It's so unfair, you dangeling your kindness in front of me, it's just so unfair, all of it                 |
-| この夜を爆破したい<br><br>君だけを覚えていたい<br><br>だから今、さよならだ<br><br>吹き飛んじまえ        | kono yoru o bakuha shitai<br><br>kimi dake o oboete itai<br><br>dakara ima, sayonara da<br><br>fukitonjimae                            | I want to blow up this night<br><br>I want to remember only you<br><br>And that's why now, it's farewell<br><br>Blow it all away                                        |
+| Japanese                                                            | Romanji                                                                                                                                  | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                               | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html)                                                                                                               |
+| ------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 死んだ眼で爆弾片手に口を開く<br><br>さよならだ人類、みんな吹き飛んじまえ                            | shinda me de bakudan katate ni kuchi o hiraku<br><br>sayonara da jinrui, minna fukitonjimae                                              | With dead eyes and a bomb in one hand, I open my mouth<br><br>It's farewell humanity, I'm blowing everyone all away                                                     | Với đôi mắt thẫn thờ, mang trên tay trái bom, ta nói<br><br>“Tạm biệt nhân loại, ta sẽ thổi bay tất cả!”                                                                            |
+| 泣いた顔で爆弾片手　夜が苦しい<br><br>安っぽいナイトショーのワンシーンみたいな夢が見たい                    | naita kao de bakudan katate yoru ga kurushii<br><br>yasuppoi NAITO SHOO no WANSHIIN mitai na yume ga mitai                               | With a crying face and a bomb in one hand, the night is painful<br><br>I wanna have a dream that's like a scene from a shitty late night show                           | Khuôn mặt đẫm nước mắt, trên tay cầm trái bom. Đêm nay sao khổ sở quá<br><br>Ta muốn mơ một giấc mơ giống một cảnh trong night show rẻ tiền                                         |
+| 今日も出来ませんでした<br><br>今日もやれませんでした<br><br>青春の全部を爆破したい<br><br>君のことを歌にしたい | kyou mo dekimasen deshita<br><br>kyou mo yaremasen deshita<br><br>seishun no zenbu o bakuha shitai<br><br>kimi no koto o uta ni shitai   | I was not able to do it today again<br><br>I was not willing to do it today again<br><br>I wanna destroy all of youth<br><br>I want to turn you into song               | Hôm nay ta vẫn không làm được<br><br>Hôm nay ta vẫn chưa ra tay được<br><br>Ta muốn cho nổ tung cả cái thanh xuân<br><br>Ta muốn đem hình ảnh em vào lời ca                         |
+| この日々を爆破して<br><br>心ごと爆破して<br><br>ずるいよ、優しさってやつちらつかせてさ　ずるいよ全部          | kono hibi o bakha shite<br><br>kokorogoto bakuha shite<br><br>zurui yo, yasashisa tte yatsu chiratsukasete sa zurui yo zenbu             | Blowing up these days,<br><br>Blowing up my emotions,<br><br>It's so unfair, you dangeling your kindness in front of me, it's just so unfair, all of it                 | Ta sẽ nổ tung hết những ngày tháng này,<br><br>nổ tung hết cả con tim này<br><br>Thật bất công, các người dám mặn nồng ở đây. Tất cả đều quá bất công!                              |
+| この部屋を爆破したい<br><br>夢がなきゃ生きられない<br><br>だから今、さよならだ<br><br>吹き飛んじまえ      | kono heya o bakuha shitai<br><br>yume ga nakya ikirarenai<br><br>dakara ima, sayonara da<br><br>fukitonjimae                             | I wanna blow up this room<br><br>You can't live without dreams<br><br>And that's why now, it's farewell<br><br>Blow it all away                                         | Ta muốn nổ tung căn phòng này<br><br>Không có giấc mơ ta sống không nổi<br><br>Vậy nên, ngay lúc này, tạm biệt tất cả,<br><br>cút hết đi!                                           |
+| 死んだ目で爆弾片手に街を歩く<br><br>誰も見向きもしないんだ　爆弾を翳したとて                          | shinda me de bakudan katate ni machi o aruku<br><br>daremo mimuki mo shinai n’da bakudan o kazashita tote                                | With dead eyes and a bomb in one hand, I walk down the street<br><br>No one's even looking at me, even though I'm holding up a bomb                                     | Với ánh mắt lờ đờ, mang trong tay trái bom xuống phố<br><br>Cầm bom trên tay ấy vậy mà chẳng ai thèm nhìn ta                                                                        |
+| ずっと泣けませんでした<br><br>ずっと笑えませんでした<br><br>青春の全部に君がいる<br><br>風が吹けば花が咲く   | zutto nakemasen deshita<br><br>zutto waraemasen deshita<br><br>seishun no zenbu ni kimi ga iru<br><br>kaze ga fukeba hana ga saku        | I have never been able to cry<br><br>I have never been able to laugh<br><br>You're there within all my youth<br><br>If the wind blows, flowers will bloom               | Ta mãi vẫn không khóc nổi<br><br>Vẫn không thể tươi cười nổi<br><br>Thanh xuân ấy đều có em bên cạnh<br><br>Chỉ cần gió thổi hoa sẽ đua nở                                          |
+| あの夏を爆破して<br><br>思い出を爆破して<br><br>酷いよ、君自身は黙って消えたくせに<br><br>酷いよ全部      | ano natsu o bakuha shite<br><br>omoide o bakuha shite<br><br>hidoi yo, kimi jishin wa damatte kieta kuse ni<br><br>hidoi yo zenbu        | Blowing up that summer<br><br>Blowing up my memories<br><br>It's so cruel, all because you silently disappeared all on your own, it's so cruel, all of it               | Ta sẽ nổ tung mùa hè năm ấy,<br><br>nổ tung cả những kỷ niệm<br><br>Thật quá đáng, em lại không nói lời nào mà biến mất. Tất cả đều thật quá đáng                                   |
+| この街を爆破したい<br><br>このままじゃ生きられない<br><br>だから今、さよならだ<br><br>吹き飛んじまえ      | kono machi o bakuha shitai<br><br>kono mama ja ikirarenai<br><br>dakara ima, sayonara da<br><br>fukitonjimae                             | I wanna blow up this town<br><br>I just can't keep living like this<br><br>And that's why now, it's farewell<br><br>Blow it all away                                    | Ta muốn cho nổ cả thành phố này<br><br>Cứ thế này ta sẽ không sống nổi mất<br><br>Vậy nên ngay lúc này, tạm biệt,<br><br>tất cả đi chết hết đi!                                     |
+| もっと笑えばよかった<br><br>ずっと戻りたかった<br><br>青春の全部に散れば咲け<br><br>散れば咲けよ百日紅     | motto waraeba yokatta<br><br>zutto modoritakatta<br><br>seishun no zenbu ni chireba sake<br><br>chireba sake yo sarusuberi               | I would have liked to smile more<br><br>I always wanted to go back<br><br>If all my youth is scattered, then bloom<br><br>If it's scattered then bloom, oh crape myrtle | Giá mà khi ấy ta cười nhiều hơn<br><br>Ta muốn quay lại lắm<br><br>Nếu ngươi có rơi về thanh xuân của ta thì hãy nở đi<br><br>Nếu có rơi xuống thì hãy nở đi, hỡi hoa bằng lăng xẻ! |
+| この日々を爆破して<br><br>心ごと爆破して<br><br>辛くてもいい　苦しさも全部僕のものだ<br><br>わかってるんだ   | kono hibi o bakuha shite<br><br>kokorogoto bakuha shite<br><br>tsurakute mo ii kurushisa mo zenbu boku no mono da<br><br>wakatte’ru n’da | Blowing up these days,<br><br>Blowing up my emotions,<br><br>I don't care if it's heartbreaking, the suffering and everything else are mine,<br><br>I get it!           | Ta sẽ nổ tung hết những ngày tháng này,<br><br>nổ tung hết cả con tim này<br><br>Dẫu có đau đớn cũng không sao, nỗi khổ đau cũng là của ta<br><br>Ta biết chứ!                      |
+| この星を爆破したい<br><br>君を消せるだけでいい<br><br>今しかない、いなくなれ                      | kono hoshi o bakuha shitai<br><br>kimi o keseru dake de ii<br><br>ima shika nai, inaku nare                                              | I wanna blow up this planet<br><br>So long as I can erase you<br><br>It's now or never, disappear!                                                                      | Ta muốn nổ tung hành tinh này,<br><br>chỉ cần xóa được hình dáng em là được<br><br>Chỉ có lúc này thôi, hãy biến mất đi!                                                            |
+| この日々を爆破して<br><br>心ごと爆破して<br><br>ずるいよ、優しさってやつちらつかせてさ<br><br>ずるいよ全部   | kono hibi o bakuha shite<br><br>kokorogoto bakuha shite<br><br>zurui yo, yasashisa tte yatsu chiratsukasete sa<br><br>zurui yo zenbu     | Blowing up these days,<br><br>Blowing up my emotions,<br><br>It's so unfair, you dangeling your kindness in front of me,<br><br>it's just so unfair, all of it          | Ta sẽ nổ tung hết những ngày tháng này,<br><br>nổ tung hết cả con tim này<br><br>Thật bất công, các người dám mặn nồng ở đây<br><br>Tất cả đều quá bất công!                        |
+| この夜を爆破したい<br><br>君だけを覚えていたい<br><br>だから今、さよならだ<br><br>吹き飛んじまえ        | kono yoru o bakuha shitai<br><br>kimi dake o oboete itai<br><br>dakara ima, sayonara da<br><br>fukitonjimae                              | I want to blow up this night<br><br>I want to remember only you<br><br>And that's why now, it's farewell<br><br>Blow it all away                                        | Ta muốn cho nổ tung màn đêm này,<br><br>ta chỉ muốn nhớ về em thôi<br><br>Vậy nên ngay lúc này, tạm biệt<br><br>Tất cả cuốn bay hết đi!                                             |
 ##### Notes
 >
