--- a/(2020) Plagiarism/06. Replicant.md
+++ b/(2020) Plagiarism/06. Replicant.md
@@ -1,22 +1,30 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-レプリカント | Replicant
+レプリカント | Replicant | Người nhân bản
 #### Lyrics
 
-| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                              | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                            |
-| ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 君は映画をずっと観ている<br><br>誰一人もいない劇場で<br><br>今思えばチープなセットで人のよく死ぬSF映画                                                                                | Kimi wa eiga o zutto miteiru<br><br>Dare hitori mo inai gekijō de<br><br>Ima omoeba chi-pu na setto de hito no yoku shinu SF eiga                                                                                                                                                    | You're always watching a movie<br><br>In a theater with no one in it<br><br>If you think about it now, it's a sci-fi movie [[#^1]] with a cheap set where many people die                                                                                                                                                            |
-| いつか世界が真面になって、人の寿命さえ随分伸びて、<br><br>死ねない世界になればいいのにね                                                                                            | Itsuka sekai ga matomo ni natte, hito no jumyō sae zuibun nobite,<br><br>Shinenai sekai ni nareba ii noni ne                                                                                                                                                                         | If one day the world would become decent, and people's lifespans expand considerably,<br><br>If only it could become a world where you can't die, right                                                                                                                                                                              |
-| そしたら心以外は偽物だ<br><br>言葉以外は偽物だ<br><br>神様だって作品なんだから<br><br>僕ら皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>冷たくなって年老いて<br><br>その時に                            | Soshitara kokoro igai wa nisemono da<br><br>Kotoba igai wa nisemono da<br><br>Kamisama datte sakuhin na n da kara<br><br>Bokura minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Tsumetaku natte toshioite<br><br>Sono tokini                                             | And then everything but the heart [[#^2]] would be fake<br><br>Everything but words would be fake<br><br>God's just a work of fiction after all<br><br>We're all just replicas<br><br>In due time the seasons pass<br><br>Getting colder and growing older<br><br>At that moment                                                     |
-| 僕は映画をずっと観ている<br><br>つまらないほどに薄い映画<br><br>席を立ってからやっと気付く<br><br>これは僕を描いたドラマだ                                                                   | Boku wa eiga o zutto miteiru<br><br>Tsumaranai hodo ni usui eiga<br><br>Seki o tatte kara yatto kizuku<br><br>Kore wa boku o egaita dorama da                                                                                                                                        | I'm always watching a movie<br><br>A boringly shallow film<br><br>Only after I leave my seat do I finally realize<br><br>This is the drama I wrote                                                                                                                                                                                   |
-| いつか僕らは大人になって、<br><br>手に入れるものも大きくなった<br><br>次は愛でも買えればいいのにね                                                                                   | Itsuka bokura wa otona ni natte,<br><br>Te ni ireru mono mo ōkiku natta<br><br>Tsugi wa ai de mo kaereba ii noni ne                                                                                                                                                                  | As we grow up in due time,<br><br>The things we could get also grew<br><br>If only we could next buy love, right                                                                                                                                                                                                                     |
-| あんたの価値観なんて偽物だ<br><br>思い出だって偽物だ<br><br>心は脳の信号なんだから<br><br>愛も皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>思い出ばかりが募って<br><br>その時に                          | Anta no kachikan nante nisemono da<br><br>Omoide datte nisemono da<br><br>Kokoro wa nō no shingō na n da kara<br><br>Ai mo minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Omoide bakari ga tsunotte<br><br>Sono tokini                                                  | Your values are just fucking fakes<br><br>Even memories are just fakes<br><br>The mind[[#^2]] is just brain signals, after all<br><br>Love and everyone are just replicas<br><br>In due time the seasons pass<br><br>Nothing but memories growing stronger<br><br>At that moment                                                     |
-| 満たされるならそれで良かった<br><br>歌を歌うのに理由も無いわ<br><br>他人の為に生きられない<br><br>さよなら以外全部塵                                                                      | Mitasareru nara sorede yokatta<br><br>Uta wo utau noni riyū mo nai wa<br><br>Tanin no tameni ikirarenai<br><br>Sayonara igai zenbu gomi                                                                                                                                              | If only I could have just been satisfied<br><br>Even though I sing songs, there's really no reason to<br><br>I can't live for the sake of others<br><br>Everything beyond goodbye is trash                                                                                                                                           |
-| 人を呪う歌が描きたい<br><br>それで誰かを殺せればいいぜ<br><br>夏の匂いに胸が詰まっていた                                                                                        | Hito wo norou uta ga egakitai<br><br>Sorede dare ka wo korosereba ii ze<br><br>Natsu no nioi ni mune ga tsumatteita                                                                                                                                                                  | I want to create songs that curse people<br><br>If that can kill someone, it'd be great<br><br>The smell of summer was stuck in my chest                                                                                                                                                                                             |
-| 僕らの心以外は偽物だ<br><br>言葉以外は偽物だ<br><br>この世の全部は主観なんだから<br><br>君も皆レプリカだ<br><br>さよならだって投げ出して<br><br>このまま遠く逃げ出して                                     | Bokura no kokoro igai wa nisemono da<br><br>Kotoba igai wa nisemono da<br><br>Kono yo no zenbu wa shukan na n da kara<br><br>Kimi mo minna repurika da<br><br>Sayonara datte nagedashite<br><br>Kono mama tōku nigedashite                                                           | Everything but our hearts is fake<br><br>Everything but words is fake<br><br>Everything in this whole world is subjective after all<br><br>You and everyone are just replicas<br><br>Throw out your farewells<br><br>Run far away like this                                                                                          |
-| 言葉で全部表して<br><br>心も愛も書き足して<br><br>それでも空は酷く青いんだから<br><br>それはきっと魔法だから<br><br>いつか季節が過ぎ去って<br><br>冷たくなって年老いて<br><br>その時にやっとわかる<br><br>僕もその青さがわかる | Kotoba de zenbu arawashite<br><br>Kokoro mo ai mo kaki tashite<br><br>Soredemo sora wa hidoku aoi n da kara<br><br>Sore wa kitto mahō da kara<br><br>Itsuka kisetsu ga sugisatte<br><br>Tsumetaku natte toshioite<br><br>Sono tokini yatto wakaru<br><br>Boku mo sono aosa ga wakaru | Reveal everything with words<br><br>Write down your heart and love too<br><br>But even so, the sky really is terribly blue<br><br>That surely must be magic<br><br>In due time the seasons will pass<br><br>Getting colder and growing older<br><br>At that moment I'll finally understand<br><br>I’ll also understand that blueness |
+| Japanese                                                                                                                                    | Romanji                                                                                                                                                                                                                                                                              | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                            | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^3]]                                                                                                                                                                                                                                                                                                |
+| ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 君は映画をずっと観ている<br><br>誰一人もいない劇場で<br><br>今思えばチープなセットで人のよく死ぬSF映画                                                                                | Kimi wa eiga o zutto miteiru<br><br>Dare hitori mo inai gekijō de<br><br>Ima omoeba chi-pu na setto de hito no yoku shinu SF eiga                                                                                                                                                    | You're always watching a movie<br><br>In a theater with no one in it<br><br>If you think about it now, it's a sci-fi movie [[#^1]] with a cheap set where many people die                                                                                                                                                            | Em chăm chú vào bộ phim, tại rạp chiếu không một bóng người<br><br>Chiếu theo thời nay thì đó là một bộ phim SF dựng cảnh rẻ tiền, nhân vật thì chết như ngả rạ                                                                                                                                                                                                              |
+| いつか世界が真面になって、人の寿命さえ随分伸びて、<br><br>死ねない世界になればいいのにね                                                                                            | Itsuka sekai ga matomo ni natte, hito no jumyō sae zuibun nobite,<br><br>Shinenai sekai ni nareba ii noni ne                                                                                                                                                                         | If one day the world would become decent, and people's lifespans expand considerably,<br><br>If only it could become a world where you can't die, right                                                                                                                                                                              | Giá mà một ngày nào đó thế giới này trở nên ngay thẳng<br>Con người thì sống lâu hơn thật lâu<br><br>Rồi không thể chết nữa thì tốt biết mấy ha                                                                                                                                                                                                                              |
+| そしたら心以外は偽物だ<br><br>言葉以外は偽物だ<br><br>神様だって作品なんだから<br><br>僕ら皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>冷たくなって年老いて<br><br>その時に                            | Soshitara kokoro igai wa nisemono da<br><br>Kotoba igai wa nisemono da<br><br>Kamisama datte sakuhin na n da kara<br><br>Bokura minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Tsumetaku natte toshioite<br><br>Sono tokini                                             | And then everything but the heart [[#^2]] would be fake<br><br>Everything but words would be fake<br><br>God's just a work of fiction after all<br><br>We're all just replicas<br><br>In due time the seasons pass<br><br>Getting colder and growing older<br><br>At that moment                                                     | Nếu mà vậy thì ngoài con tim ra tất cả đều là đồ giả<br><br>Ngoài câu từ ra thì tất cả đều là đồ giả<br><br>Bởi vì ngay cả thần thánh thì cũng chỉ là tác phẩm thôi<br><br>Tất cả chúng ta đều chỉ là bản sao<br><br>Một ngày nào đó các mùa sẽ đi qua<br><br>Lạnh lẽo và già nua<br><br>Đến khi đó…                                                                         |
+| 僕は映画をずっと観ている<br><br>つまらないほどに薄い映画<br><br>席を立ってからやっと気付く<br><br>これは僕を描いたドラマだ                                                                   | Boku wa eiga o zutto miteiru<br><br>Tsumaranai hodo ni usui eiga<br><br>Seki o tatte kara yatto kizuku<br><br>Kore wa boku o egaita dorama da                                                                                                                                        | I'm always watching a movie<br><br>A boringly shallow film<br><br>Only after I leave my seat do I finally realize<br><br>This is the drama I wrote                                                                                                                                                                                   | Ta vẫn chăm chú cuốn vào bộ phim, một bộ phim nhạt đến mức chán òm<br><br>Đến khi đứng lên ta mới nhận ra, đó là bộ drama về cuộc đời ta                                                                                                                                                                                                                                     |
+| いつか僕らは大人になって、<br><br>手に入れるものも大きくなった<br><br>次は愛でも買えればいいのにね                                                                                   | Itsuka bokura wa otona ni natte,<br><br>Te ni ireru mono mo ōkiku natta<br><br>Tsugi wa ai de mo kaereba ii noni ne                                                                                                                                                                  | As we grow up in due time,<br><br>The things we could get also grew<br><br>If only we could next buy love, right                                                                                                                                                                                                                     | Một ngày nào đó chúng ta thành người lớn<br><br>Những thứ có được cũng sẽ to hơn<br><br>Giá mà ngay cả tình yêu cũng mua được bằng tiền thì tốt ha                                                                                                                                                                                                                           |
+| あんたの価値観なんて偽物だ<br><br>思い出だって偽物だ<br><br>心は脳の信号なんだから<br><br>愛も皆レプリカだ<br><br>いつか季節が過ぎ去って<br><br>思い出ばかりが募って<br><br>その時に                          | Anta no kachikan nante nisemono da<br><br>Omoide datte nisemono da<br><br>Kokoro wa nō no shingō na n da kara<br><br>Ai mo minna repurika da<br><br>Itsuka kisetsu ga sugisatte<br><br>Omoide bakari ga tsunotte<br><br>Sono tokini                                                  | Your values are just fucking fakes<br><br>Even memories are just fakes<br><br>The mind[[#^2]] is just brain signals, after all<br><br>Love and everyone are just replicas<br><br>In due time the seasons pass<br><br>Nothing but memories growing stronger<br><br>At that moment                                                     | Giá trị quan của các người đều là đồ giả hết<br><br>Kỉ niệm thì cũng là đồ giả hết<br><br>Bởi vì trái tim cũng chỉ là tín hiệu từ não mà thôi<br><br>Tình yêu tất cả đều chỉ là bản sao<br><br>Một ngày nào đó các mùa sẽ đi qua<br><br>Ký ức dội lại mạnh mẽ về trong ta<br><br>Chính lúc đó…                                                                               |
+| 満たされるならそれで良かった<br><br>歌を歌うのに理由も無いわ<br><br>他人の為に生きられない<br><br>さよなら以外全部塵                                                                      | Mitasareru nara sorede yokatta<br><br>Uta wo utau noni riyū mo nai wa<br><br>Tanin no tameni ikirarenai<br><br>Sayonara igai zenbu gomi                                                                                                                                              | If only I could have just been satisfied<br><br>Even though I sing songs, there's really no reason to<br><br>I can't live for the sake of others<br><br>Everything beyond goodbye is trash                                                                                                                                           | Nếu khi ấy bản thân ta thỏa mãn được thì là chuyện tốt thôi<br><br>Ta chẳng biết lí do gì mà ta hát nữa<br><br>Ta không thể sống cho người khác được<br><br>Ngoài lời tạm biệt ra tất cả đều là rác rưởi                                                                                                                                                                     |
+| 人を呪う歌が描きたい<br><br>それで誰かを殺せればいいぜ<br><br>夏の匂いに胸が詰まっていた                                                                                        | Hito wo norou uta ga egakitai<br><br>Sorede dare ka wo korosereba ii ze<br><br>Natsu no nioi ni mune ga tsumatteita                                                                                                                                                                  | I want to create songs that curse people<br><br>If that can kill someone, it'd be great<br><br>The smell of summer was stuck in my chest                                                                                                                                                                                             | Ta muốn viết ra những bài hát nguyền rủa con người<br><br>Nếu nhờ thế mà giết được ai đó thì hay đấy<br><br>Trái tim này đã mắc kẹt trong hương vị của mùa hè                                                                                                                                                                                                                |
+| 僕らの心以外は偽物だ<br><br>言葉以外は偽物だ<br><br>この世の全部は主観なんだから<br><br>君も皆レプリカだ<br><br>さよならだって投げ出して<br><br>このまま遠く逃げ出して                                     | Bokura no kokoro igai wa nisemono da<br><br>Kotoba igai wa nisemono da<br><br>Kono yo no zenbu wa shukan na n da kara<br><br>Kimi mo minna repurika da<br><br>Sayonara datte nagedashite<br><br>Kono mama tōku nigedashite                                                           | Everything but our hearts is fake<br><br>Everything but words is fake<br><br>Everything in this whole world is subjective after all<br><br>You and everyone are just replicas<br><br>Throw out your farewells<br><br>Run far away like this                                                                                          | Trong chúng ta ngoài trái tim ra đều là đồ giả<br><br>Ngoài câu từ ra chỉ toàn là đồ giả<br><br>Bởi vì thế giới này ai cũng chỉ biết đến mình mà thôi<br><br>Cả em nữa tất cả đều chỉ là bản sao<br><br>Lời tạm biệt hãy vứt nó đi<br><br>Chúng ta hãy cứ vậy chạy đi thật xa đi                                                                                             |
+| 言葉で全部表して<br><br>心も愛も書き足して<br><br>それでも空は酷く青いんだから<br><br>それはきっと魔法だから<br><br>いつか季節が過ぎ去って<br><br>冷たくなって年老いて<br><br>その時にやっとわかる<br><br>僕もその青さがわかる | Kotoba de zenbu arawashite<br><br>Kokoro mo ai mo kaki tashite<br><br>Soredemo sora wa hidoku aoi n da kara<br><br>Sore wa kitto mahō da kara<br><br>Itsuka kisetsu ga sugisatte<br><br>Tsumetaku natte toshioite<br><br>Sono tokini yatto wakaru<br><br>Boku mo sono aosa ga wakaru | Reveal everything with words<br><br>Write down your heart and love too<br><br>But even so, the sky really is terribly blue<br><br>That surely must be magic<br><br>In due time the seasons will pass<br><br>Getting colder and growing older<br><br>At that moment I'll finally understand<br><br>I’ll also understand that blueness | Lời nói có bao nhiêu hãy thể hiện ra hết đi<br><br>Tâm can rồi tình yêu hãy viết hết ra đi<br><br>Bởi vì dẫu thế nhưng bầu trời vẫn xanh một cách quá đáng<br><br>Đó hẳn phải là một loại phép thuật rồi<br><br>Một ngày nào đó các mùa sẽ qua đi<br><br>Lạnh lẽo và già nua<br><br>Đến khi đó cuối cùng ta cũng sẽ hiểu<br><br>Ta cũng sẽ hiểu được ý nghĩa của màu xanh ấy |
 ##### Notes
 >This could potentially be a reference to Blade Runner, the movie that the title of the song comes from. ^1
 
 >The word for heart, 心 (kokoro), actually refers to both the mind and the heart, as well as the soul/spirit. In Japanese, the distinction between the two isn't clear like it is in most western languages. In most instances sticking with heart works fine, but as this song almost directly touches on solipsism, I chose to translate it to "mind" when I thought it more appropriate. But know that whenever either heart or mind is said the original word is kokoro. ^2
+
+> Giải thích lời bài hát:
+> Đầu tiên, bài hát này được sáng tác dựa trên bộ phim Blade Runner công chiếu năm 1982 với chủ đề chiến tranh giữa con người và người nhân bản. Trong bộ phim này con người nhân bản được gọi với cái tên Replicant, do chính con người tạo ra và giống hệt người thật. Về nội dung phim các bạn có thể search google nhé.
+> Ngay từ những câu đầu tiên bài hát đã thể hiện ngay ý đồ đạo tác, bởi vì bộ phim được nhắc đến trong phần đầu chính là Blade Runner, một bộ phim kỹ xảo rẻ tiền của ngày xưa. Và chính từ đây nội dung của bài hát được triển khai từ ý của bộ phim: quá trình nhân vật chính đi tìm câu trả lời cho câu hỏi “Trên thế giới này cái gì mới là thật?”.
+> Quá trình giải thích câu trả lời này nằm ở 3 đoạn điệp khúc. Ở điệp khúc thứ nhất có nói ngoài trái tim và ngôn từ ra tất cả đều là giả dối, bởi vì nếu thế giới này không thể chết được nữa thì con người sẽ tồn tại bất diệt như những tác phẩm nghệ thuật, ngay cả thần thánh cũng vậy. Bởi vậy con người chúng ta chỉ là bản sao mà thôi, không khác gì so với người nhân bản trong phim cả.
+> Ở điệp khúc thứ 2 lại nói tất cả giá trị quan và ký ức đều là giả dối, vì trái tim chỉ là do não truyền tín hiệu đến chỉ đạo. Bởi vậy khi chúng ta nghĩ đến một điều gì đó, nhớ lại một điều gì đó, tất cả đều là tín hiệu do não chi phối, bởi vậy tình yêu hay gì đó cũng chỉ là bản sao mà thôi.
+> Và đến đoạn cuối, nhân vật chính nói rằng ngoài hình ảnh bản thân trong suy nghĩ của chính ta ra thì tất cả đều là giả dối. Bởi vì con người nhìn nhận mọi thứ từ quan điểm chủ quan của mình, nên cái nhìn của họ sẽ khác với sự thật. Ngay cả “em” trong mắt nhân vật chính cũng là hình tượng do chính nhân vật chính vẽ ra chứ không chắc nó giống với con người thật.
+> Đọc mãi nghe mãi rồi bạn sẽ có cảm giác đây là một quá trình tìm kiếm câu trả lời không có hồi kết, nghĩ mãi cũng không có câu trả lời cuối cùng. Khi thế giới này trở nên vĩnh viễn, câu trả lời mãi không tìm thấy điểm dừng, thì thứ duy nhất không thay đổi chính là bầu trời xanh đến mức quá đáng. Bởi vậy nhân vật chính muốn thoát khỏi thế giới vô tận ấy, đi đến điểm cuối của cuộc đời. Khi chúng ta đón nhận kết thúc, ta sẽ biết được rốt cuộc bầu trời xanh kia là cái gì, ta sẽ tìm thấy được phiên bản thật sự của chính mình. ^3
