--- a/(2020) Plagiarism/07. Flower and Badger Game.md
+++ b/(2020) Plagiarism/07. Flower and Badger Game.md
@@ -1,26 +1,31 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-花人局 | Hanamotase [[#^title]]
+花人局 | Hanamotase [[#^title]] | Trao hoa cho người / Hoa nhân kế
 #### Lyrics
 
-| Japanese                                                                                                         | Romanji                                                                                                                                                                                                                       | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                         |
-| ---------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| さよならを置いて僕に花もたせ<br><br>覚束ぬままに夜が明けて<br><br>誰もいない部屋で起きた<br><br>その温もり一つ残して                                           | Sayonara wo oite boku ni hanamotase<br><br>Obotsukanu mamani yo ga akete<br><br>Dare mo inai heya de okita<br><br>Sono nukumori hitotsu nokoshite                                                                             | Put down farewell and let me have a flower[[#^1]]<br><br>While still in doubt, dawn breaks<br><br>And I awoke in a room with no one in it<br><br>Leaving me a lone[[#^2]] warmth                                                                                                  |
-| 昨日の夜のことは少しも覚えてないけれど<br><br>他に誰かが居た、そんな気がただしている<br><br>二日酔いが残る頭は回っちゃいないけれど<br><br>わからないままでもまぁ、それはそれでも綺麗だ          | Kinō no yoru no koto wa sukoshi mo oboetenai keredo<br><br>Hoka ni dareka ga ita, sonna ki ga tadashiteiru<br><br>Futsukayoi ga nokoru atama wa mawa chainai keredo<br><br>Wakaranai mama demo maa, sore wa soredemo kirei da | I don't remember the slightest bit of yesterday's night, however<br><br>I'm correcting the feeling that there was someone else there<br><br>I'm still hungover and not thinking too well, however<br><br>Still not being able to understand it, well, that in itself is beautiful |
-| 洗面台の歯ブラシ、誰かのコップ、棚の化粧水。<br><br>覚えのない物ばかりだ<br><br>枕は花の匂いがする                                                        | Senmendai no haburashi, dare ka no koppu, tana no keshōsui.<br><br>Oboe no nai mono bakari da<br><br>Makura wa hana no nioi ga suru                                                                                           | A toothbrush on the bathroom counter, someone's drinking glass, skin lotion on the shelf.<br><br>It's all things I have no memory of<br><br>The pillow smells like flowers                                                                                                        |
-| さよならを置いて僕に花もたせ<br><br>覚束ぬままに夜が明けて<br><br>誰もいない部屋で起きる<br><br>その温もり一つ残して                                           | Sayonara wo oite boku ni hanamotase<br><br>Obotsukunu mamani yo ga akete<br><br>Dare mo inai heya de okiru<br><br>Sono nukumori hitotsu nokoshite                                                                             | Put down farewell and let me have a flower<br><br>While still in doubt, dawn breaks<br><br>And I awake in a room with no one in it<br><br>Leaving me a lone warmth                                                                                                                |
-| 昨日の夜のことはそこまで覚えてないけれど<br><br>美人局を疑う、そんな気もしないでいる<br><br>二日酔いも醒めた頭で考えていたけど、わからないままでもいい<br><br>むしろその方がいい             | Kinō no yoru no koto wa soko made oboetenai keredo<br><br>Tsutsumotase o utagau, sonna ki mo shinaideiru<br><br>Futsukayoi mo sameta atama de kangaeteita kedo, wakaranai mama demo ii<br><br>Mushiro sono hō ga ii           | I don't really remember yesterday's night that well, however<br><br>I continue to remain without suspecting a badger game<br><br>My hangover's cleared and I've thought about it, but I'm fine with not understanding it<br><br>In fact, I'd like not to                          |
-| 窓際咲くラベンダー、汚れたシンク、編み掛けのマフラー、<br><br>覚えのない事ばかりだ<br><br>部屋には春の匂いがする                                                 | Madogiwa saku rabenda-, yogoreta shinku, amikake no mafura-,<br><br>Oboe no nai koto bakari da<br><br>Heya ni wa haru no nioi ga suru                                                                                         | Lavender blooming at the window, a dirtied sink, a knitted scarf,<br><br>It's all things I have no memory of<br><br>The room smells like spring                                                                                                                                   |
-| 浮雲掴むような花人局<br><br>誰も来ないまま日が暮れて<br><br>夕陽の差した窓一つ<br><br>何も知らない僕を残して                                               | Ukigumo tsukamu yōna hanamotase<br><br>Dare mo konai mama hi ga kurete<br><br>Yūhi no sashita mado hitotsu<br><br>Nani mo shiranai boku o nokoshite                                                                           | A flower scheme like trying to grab a floating cloud<br><br>While no one comes, the sun sets<br><br>A lone window the setting rays shined upon<br><br>Leaving me alone without knowing anything                                                                                   |
-| 昨日の夜のことも本当は少し覚えてるんだ<br><br>貴方の居ない暮らし、それが続くことも<br><br>今でもこの頭一つで考えているばかり<br><br>花一つ持たせて消えた貴方のこと                    | Kinō no yoru no koto mo hontōu wa sukoshi oboeteru n da<br><br>Anata no inai kurashi, sore ga tsuzuku koto mo<br><br>Ima demo kono atama hitotsu de kangaeteiru bakari<br><br>Hana hitotsu motasete kieta anata no koto       | Honestly, I remember a little bit about last night too<br><br>About life continuing without you as well<br><br>Even now I keep on thinking about it with this lone head<br><br>About you who disappeared, letting me have a lone flower                                           |
-| 明日にはきっと戻ってくる<br><br>何気ない顔で帰ってくる<br><br>今にドアが開いて聞こえる<br><br>ごめんね、遅くなったって<br><br>言葉だけをずっと待っている<br><br>夕焼けをじっと待っている | Ashita ni wa kitto modottekuru<br><br>Nanigenai kao de kaettekuru<br><br>Imani doa ga hiraite kikoeru<br><br>Gomen ne, osoku natta tte<br><br>Kotoba dake wo zutto matteiru<br><br>Yūyake wo jitto matteiru                   | Tomorrow you'll surely come back<br><br>You'll come back home with a casual look on your face<br><br>I can hear the door opening now<br><br>And you saying "Sorry I'm late"<br><br>I'm always waiting for just words<br><br>Patiently waiting for the afterglow of the sunset     |
-| 忘れてしまう前に花描け<br><br>今日も一人また夜が来て<br><br>誰もいない部屋で眠る<br><br>その温もり、僕に残して                                              | Wasureteshimau mae ni hana egake<br><br>Kyō mo hitori mata yo ga kite<br><br>Dare mo inai heya de nemuru<br><br>Sono nukumori, boku ni nokoshite                                                                              | Before I forget completely, picture the flowers<br><br>All alone, today another night will come<br><br>I'll sleep in a room with no one else in it<br><br>That warmth alone, left to me                                                                                           |
-| 馬鹿みたいに愛は花もたせ<br><br>この部屋にもまた春が来て<br><br>貴方のいない街を生きる<br><br>その温もり、僕に残して<br><br>僕にひとつ、花を残して                        | Baka mitai ni ai wa hanamotase<br><br>Kono heya ni mo mata haru ga kite<br><br>Anata no inai machi o ikiru<br><br>Sono nukumori, boku ni nokoshite<br><br>Boku ni hitotsu, hana o nokoshite                                   | Ridiculously, love is an entrusted flower<br><br>Spring will come again to this room as well<br><br>I'll live in this town without you<br><br>With that warmth, left to me<br><br>Left to me, a lone flower                                                                       |
-| 言葉だけをずっと待っている<br><br>夕焼けをじっと待っている                                                                                | Kotoba dake wo zutto matteiru<br><br>Yūyake wo jitto matteiru                                                                                                                                                                 | I'm always waiting for just words<br><br>Patiently waiting for the afterglow of the sunset                                                                                                                                                                                        |
+| Japanese                                                                                                         | Romanji                                                                                                                                                                                                                       | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                         | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^3]]                                                                                                                                                                                                |
+| ---------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| さよならを置いて僕に花もたせ<br><br>覚束ぬままに夜が明けて<br><br>誰もいない部屋で起きた<br><br>その温もり一つ残して                                           | Sayonara wo oite boku ni hanamotase<br><br>Obotsukanu mamani yo ga akete<br><br>Dare mo inai heya de okita<br><br>Sono nukumori hitotsu nokoshite                                                                             | Put down farewell and let me have a flower[[#^1]]<br><br>While still in doubt, dawn breaks<br><br>And I awoke in a room with no one in it<br><br>Leaving me a lone[[#^2]] warmth                                                                                                  | Người để lại lời tạm biệt, trao cho ta một bông hoa<br><br>Trời trở sáng trong khi ta vẫn bán tín bán nghi<br><br>Thức dậy trong căn phòng không có một ai<br><br>Người bỏ lại nơi ta chút hơi ấm đó                                                                         |
+| 昨日の夜のことは少しも覚えてないけれど<br><br>他に誰かが居た、そんな気がただしている<br><br>二日酔いが残る頭は回っちゃいないけれど<br><br>わからないままでもまぁ、それはそれでも綺麗だ          | Kinō no yoru no koto wa sukoshi mo oboetenai keredo<br><br>Hoka ni dareka ga ita, sonna ki ga tadashiteiru<br><br>Futsukayoi ga nokoru atama wa mawa chainai keredo<br><br>Wakaranai mama demo maa, sore wa soredemo kirei da | I don't remember the slightest bit of yesterday's night, however<br><br>I'm correcting the feeling that there was someone else there<br><br>I'm still hungover and not thinking too well, however<br><br>Still not being able to understand it, well, that in itself is beautiful | Chuyện đêm qua ta chẳng nhớ chút nào cả<br><br>Đầu ta vẫn còn vương chút men sau hai ngày say, nhưng ta không chếnh choáng<br><br>Vậy mà ta chẳng hiểu chuyện gì xảy ra cả, mà thôi mọi thứ vẫn đẹp đẽ                                                                       |
+| 洗面台の歯ブラシ、誰かのコップ、棚の化粧水。<br><br>覚えのない物ばかりだ<br><br>枕は花の匂いがする                                                        | Senmendai no haburashi, dare ka no koppu, tana no keshōsui.<br><br>Oboe no nai mono bakari da<br><br>Makura wa hana no nioi ga suru                                                                                           | A toothbrush on the bathroom counter, someone's drinking glass, skin lotion on the shelf.<br><br>It's all things I have no memory of<br><br>The pillow smells like flowers                                                                                                        | Bàn chải đánh răng trên bồn rửa mặt, chiếc cốc của ai đó, nước hoa hồng trên kệ<br><br>Toàn những thứ ta chẳng quen chút nào<br><br>Trên gối vẫn còn lưu lại mùi hoa                                                                                                         |
+| さよならを置いて僕に花もたせ<br><br>覚束ぬままに夜が明けて<br><br>誰もいない部屋で起きる<br><br>その温もり一つ残して                                           | Sayonara wo oite boku ni hanamotase<br><br>Obotsukunu mamani yo ga akete<br><br>Dare mo inai heya de okiru<br><br>Sono nukumori hitotsu nokoshite                                                                             | Put down farewell and let me have a flower<br><br>While still in doubt, dawn breaks<br><br>And I awake in a room with no one in it<br><br>Leaving me a lone warmth                                                                                                                | Người để lại lời tạm biệt, trao cho ta một bông hoa<br><br>Trời trở sáng trong khi ta vẫn bán tín bán nghi<br><br>Thức dậy trong căn phòng không có một ai<br><br>Người bỏ lại nơi ta chút hơi ấm đó                                                                         |
+| 昨日の夜のことはそこまで覚えてないけれど<br><br>美人局を疑う、そんな気もしないでいる<br><br>二日酔いも醒めた頭で考えていたけど、わからないままでもいい<br><br>むしろその方がいい             | Kinō no yoru no koto wa soko made oboetenai keredo<br><br>Tsutsumotase o utagau, sonna ki mo shinaideiru<br><br>Futsukayoi mo sameta atama de kangaeteita kedo, wakaranai mama demo ii<br><br>Mushiro sono hō ga ii           | I don't really remember yesterday's night that well, however<br><br>I continue to remain without suspecting a badger game<br><br>My hangover's cleared and I've thought about it, but I'm fine with not understanding it<br><br>In fact, I'd like not to                          | Chuyện đêm qua ta cũng không nhớ lắm đâu<br><br>Bị dính mỹ nhân kế ư? Ta không nghĩ thế đâu<br><br>Sau hai ngày say hơi men giờ đã tiêu tan, nhưng nghĩ mãi vẫn chẳng hiểu gì cả<br><br>Mà không sao, ngược lại thà như vậy có khi lại tốt hơn                               |
+| 窓際咲くラベンダー、汚れたシンク、編み掛けのマフラー、<br><br>覚えのない事ばかりだ<br><br>部屋には春の匂いがする                                                 | Madogiwa saku rabenda-, yogoreta shinku, amikake no mafura-,<br><br>Oboe no nai koto bakari da<br><br>Heya ni wa haru no nioi ga suru                                                                                         | Lavender blooming at the window, a dirtied sink, a knitted scarf,<br><br>It's all things I have no memory of<br><br>The room smells like spring                                                                                                                                   | Hoa oải hương nở bên bậu cửa sổ, bồn rửa bát dính bẩn, khăn quàng cổ đan len<br><br>Toàn những chuyện ta chẳng nhớ gì cả<br><br>Trong phòng vẫn còn vương mùi hương của mùa xuân                                                                                             |
+| 浮雲掴むような花人局<br><br>誰も来ないまま日が暮れて<br><br>夕陽の差した窓一つ<br><br>何も知らない僕を残して                                               | Ukigumo tsukamu yōna hanamotase<br><br>Dare mo konai mama hi ga kurete<br><br>Yūhi no sashita mado hitotsu<br><br>Nani mo shiranai boku o nokoshite                                                                           | A flower scheme like trying to grab a floating cloud<br><br>While no one comes, the sun sets<br><br>A lone window the setting rays shined upon<br><br>Leaving me alone without knowing anything                                                                                   | Hoa nhân kế mơ hồ như tóm lấy áng mây nổi<br><br>Mặt trời lặn xuống mà vẫn chẳng có ai đến<br><br>Bên cửa sổ ánh nắng xiên vào<br><br>Bơ vơ mình ta vẫn chẳng biết chuyện gì cả                                                                                              |
+| 昨日の夜のことも本当は少し覚えてるんだ<br><br>貴方の居ない暮らし、それが続くことも<br><br>今でもこの頭一つで考えているばかり<br><br>花一つ持たせて消えた貴方のこと                    | Kinō no yoru no koto mo hontōu wa sukoshi oboeteru n da<br><br>Anata no inai kurashi, sore ga tsuzuku koto mo<br><br>Ima demo kono atama hitotsu de kangaeteiru bakari<br><br>Hana hitotsu motasete kieta anata no koto       | Honestly, I remember a little bit about last night too<br><br>About life continuing without you as well<br><br>Even now I keep on thinking about it with this lone head<br><br>About you who disappeared, letting me have a lone flower                                           | Chuyện đêm qua thực ra ta có nhớ đôi chút đấy<br><br>Chuỗi những ngày dài sống cuộc sống không có em<br><br>Ngay cả bây giờ ta vẫn một mình suy nghĩ<br><br>Về em – người đã để lại một bông hoa cho ta rồi biến mất                                                         |
+| 明日にはきっと戻ってくる<br><br>何気ない顔で帰ってくる<br><br>今にドアが開いて聞こえる<br><br>ごめんね、遅くなったって<br><br>言葉だけをずっと待っている<br><br>夕焼けをじっと待っている | Ashita ni wa kitto modottekuru<br><br>Nanigenai kao de kaettekuru<br><br>Imani doa ga hiraite kikoeru<br><br>Gomen ne, osoku natta tte<br><br>Kotoba dake wo zutto matteiru<br><br>Yūyake wo jitto matteiru                   | Tomorrow you'll surely come back<br><br>You'll come back home with a casual look on your face<br><br>I can hear the door opening now<br><br>And you saying "Sorry I'm late"<br><br>I'm always waiting for just words<br><br>Patiently waiting for the afterglow of the sunset     | Chắc chắn ta sẽ quay trở về với ngày mai<br><br>Ta sẽ quay về với một vẻ mặt thật bình thản<br><br>Sớm thôi cửa sẽ mở và ta sẽ nghe thấy giọng em<br><br>“Em xin lỗi, em về muộn rồi”<br><br>Ta vẫn luôn mong chờ duy nhất lời nói ấy<br><br>Mong ngóng hoài chiều hoàng hôn |
+| 忘れてしまう前に花描け<br><br>今日も一人また夜が来て<br><br>誰もいない部屋で眠る<br><br>その温もり、僕に残して                                              | Wasureteshimau mae ni hana egake<br><br>Kyō mo hitori mata yo ga kite<br><br>Dare mo inai heya de nemuru<br><br>Sono nukumori, boku ni nokoshite                                                                              | Before I forget completely, picture the flowers<br><br>All alone, today another night will come<br><br>I'll sleep in a room with no one else in it<br><br>That warmth alone, left to me                                                                                           | Trước khi lãng quên mất ta sẽ vẽ một bông hoa<br><br>Ngày hôm nay màn đêm lại buông xuống bên mình ta<br><br>Lại ngủ trong căn phòng chẳng có ai cả<br><br>Hơi ấm ấy, em hãy để lại cho ta đi!                                                                               |
+| 馬鹿みたいに愛は花もたせ<br><br>この部屋にもまた春が来て<br><br>貴方のいない街を生きる<br><br>その温もり、僕に残して<br><br>僕にひとつ、花を残して                        | Baka mitai ni ai wa hanamotase<br><br>Kono heya ni mo mata haru ga kite<br><br>Anata no inai machi o ikiru<br><br>Sono nukumori, boku ni nokoshite<br><br>Boku ni hitotsu, hana o nokoshite                                   | Ridiculously, love is an entrusted flower<br><br>Spring will come again to this room as well<br><br>I'll live in this town without you<br><br>With that warmth, left to me<br><br>Left to me, a lone flower                                                                       | Tình yêu khờ khạo để lại hoa cho ta<br><br>Rồi mùa xuân sẽ lại đến với căn phòng này<br><br>Ta sẽ sống trong thành phố không có bóng dáng em<br><br>Hơi ấm đó, em hãy để lại cho ta đi<br><br>Hãy để lại cho ta một đóa hoa đi!                                              |
+| 言葉だけをずっと待っている<br><br>夕焼けをじっと待っている                                                                                | Kotoba dake wo zutto matteiru<br><br>Yūyake wo jitto matteiru                                                                                                                                                                 | I'm always waiting for just words<br><br>Patiently waiting for the afterglow of the sunset                                                                                                                                                                                        | Ta vẫn mãi chờ đợi lời nói của em đây<br><br>Chờ hoài chiều hoàng hôn buông xuống đây                                                                                                                                                                                        |
 ##### Notes
 >The title is a modification of 美人局 (tsutsumotase), which means “badger game”. It refers to a scheme in which a woman and a man prey on another man by having the woman sleep with the other man, and then have their partner in crime walk in on them or otherwise discover the affair in order to extort him. It’s also common to have no sex involved actually. The team (or lone woman) can get their victim dead drunk or otherwise drug them, then simply have the woman “wake up” in bed with them, to the victim’s surprise of course, and from there the extortion can occur. This is really what nbuna was thinking about when he wrote this. The modification comes in the first kanji, changing it from 美 (beauty) to 花 (flower). It also turns the phrase into resembling 花を持たせる (hana wo motaseru, “to have someone hold a flower) which is also used in the song recurrently. ^title
 
 >Title is referenced (and it is again in other similar spots); refer to title note above. ^1
 
 >Throughout the song there is atypical usage of the word 一つ (hitotsu, “one of”). The effect is really to highlight solitude, lonesomeness. Therefore I translate it as “a lone” to also call to mind “alone”. ^2
+
+> Giải thích về bài hát:
+> Trước hết mình sẽ giải thích về sự vi diệu của cái tiêu đề bài hát theo cách dễ hiểu nhất nhé! Tên bài hát là Hanamotase, và cách viết đúng của nó trong tiếng Nhật là 花持たせ, theo cách viết này thì nghĩa mặt chữ của nó là trao hoa cho người khác, và nghĩa đúng của nó là nhường công lao, thành quả của bản thân cho người khác. Tuy nhiên, trong tiếng Nhật còn có một từ khác là Tsutsumotase, viết theo chữ Hán là 美人局, dịch ra là mỹ nhân kế (từ này cũng xuất hiện trong lời 2 của bài hát). Và việc mà n-buna đã làm là ghép 2 từ trên với nhau, lấy 花 trong 花持たせ và 人局 trong 美人局 tạo thành một từ mới là 花人局, do đó vẫn giữ nguyên được cách đọc là Hanamotase. Tuy nhiên cái từ này là do n-buna tự sáng tạo ra và nó hoàn toàn không tồn tại trong từ điển tiếng Nhật =))) Nó được tạo ra để phục vụ cho duy nhất mục đích của bài hát này. Bởi vậy khi ghép từ như này, n-buna đã làm biến mất cái nghĩa “nhường công lao, thành quả của bản thân cho người khác”, chỉ còn giữ lại đúng cái mặt chữ là trao hoa cho người, cộng thêm ý nghĩa từ “mỹ nhân kế” tạo thành nghĩa thứ hai là “hoa nhân kế”. Đó là lí do vì sao mình dịch tiêu đề bài hát thành 2 nghĩa khác nhau. Các bạn cũng có thể đọc ra trong lời bài hát, người con gái ra đi âm thầm chỉ để lại cho nhân vật chính một đóa hoa gây thương nhớ, đó chính là hoa nhân kế ạ.
+> 
+> Khi đọc lời bài hát thì các bạn sẽ tưởng tượng ra cảnh một anh chàng say khướt và đã qua đêm cũng một cô gái nào đó mà anh ta chẳng thể nhớ ra là ai đúng không. Nhưng đọc kỹ qua 3 lời bạn sẽ thấy 3 câu “Chuyện đêm qua ta chẳng nhớ chút nào cả”, “Chuyện đêm qua ta cũng không nhớ lắm đâu”, “Chuyện đêm qua thực ra ta có nhớ đôi chút đấy”. Thực ra không phải anh ta quên đâu mà là anh ta đang tự lừa bản thân để quên đi nỗi đau mất đi người vợ yêu quý đó. Anh ta sống mãi trong quá khứ, trong mùi hương, kỷ niệm của người vợ, không chấp nhận nổi thực tại. Đây là một bài hát tuyệt vời, không một câu chữ nhớ thương nào nhưng lại thể hiện được nỗi nhớ dày vò da diết. ^3
