--- a/(2020) Plagiarism/08. Middle Age, Plagiarist.md
+++ b/(2020) Plagiarism/08. Middle Age, Plagiarist.md
@@ -1,4 +1,4 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-朱夏期、音楽泥棒 | Shukaki, Ongaku Dorobou
+朱夏期、音楽泥棒 | Shukaki, Ongaku Dorobou | Thời cực thịnh, tên trộm âm nhạc
