--- a/(2020) Plagiarism/09. Plagiarism.md
+++ b/(2020) Plagiarism/09. Plagiarism.md
@@ -1,25 +1,37 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-盗作 | Tousaku
+盗作 | Tousaku | Đạo tác
 #### Lyrics
 
-| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                          | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                 |
-| -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 「音楽の切っ掛けは何だっけ。<br><br>父の持つレコードだったかな。<br><br>音を聞くことは気持ちが良い。<br><br>聞くだけなら努力もいらない。                                                       | "Ongaku no kikkake wa nan dakke.<br><br>Chichi no motsu reko-do datta ka na.<br><br>Oto o kiku koto wa kimochi ga ii.<br><br>Kiku dake nara doryoku mo iranai.                                                                                   | "Why was it that I started music again.<br><br>I wonder if it was the records my father had.<br><br>Listening to the sound feels good.<br><br>Just listening doesn't take any work.                                                                                                       |
-| 前置きはいいから話そう。<br><br>ある時、思い付いたんだ。<br><br>この歌が僕の物になれば、この穴は埋まるだろうか。                                                                       | Maeoki wa ii kara hanasou.<br><br>Aru toki, omoitsuita n da.<br><br>Kono uta ga boku no mono ni nareba, kono ana wa umaru darou ka.                                                                                                              | Let's start with a preface.<br><br>One day, I thought of this.<br><br>If this song could become mine, would this hole be filled.                                                                                                                                                          |
-| だから、僕は盗んだ」                                                                                                                             | Dakara, boku wa nusunda"                                                                                                                                                                                                                         | And so, I stole"                                                                                                                                                                                                                                                                          |
-| 嗚呼、まだ足りない。全部足りない。<br><br>何一つも満たされない。<br><br>このまま一人じゃあ僕は生きられない。<br><br>もっと知りたい。愛を知りたい。<br><br>この心を満たすくらい美しいものを知りたい。                     | ā, mada tarinai. zenbu tarinai.<br><br>Nani hitotsu mo mitasarenai.<br><br>Kono mama hito jā boku wa ikirarenai.<br><br>Motto shiritai. ai o shiritai.<br><br>Kono kokoro o mitasu kurai utsukushii mono o shiritai.                             | Aah, it's not enough. It's all not enough.<br><br>I'm not fulfilled one bit.<br><br>I can't keep on living if I'm alone like this.<br><br>I want to know more. I want to know love.<br><br>I want to know something beautiful enough to fulfill this heart.                               |
-| 「ある時に、街を流れる歌が僕の曲だってことに気が付いた。<br><br>売れたなんて当たり前さ。<br><br>名作を盗んだものだからさぁ！                                                                 | "Aru tokini, machi o nagareru uta ga boku no kyoku datte kotoni ki ga tsuita.<br><br>Ureta nante atarimae sa.<br><br>Meisaku o nusunda mono da kara saa!                                                                                         | "One day, I realized that the song popular around town was in fact my own.<br><br>Of course it would sell well.<br><br>I stole it from a masterpiece after all!                                                                                                                           |
-| 彼奴も馬鹿だ。こいつも馬鹿だ。<br><br>褒めちぎる奴等は皆馬鹿だ。<br><br>群がる烏合の衆、本当の価値なんてわからずに。<br><br>まぁ、それは僕も同じか」                                                 | Aitsu mo baka da. koitsu mo baka da.<br><br>Homechigiru yatsura wa minna baka da.<br><br>Muragaru ugō no shū, hontō no kachi nante wakarazu ni.<br><br>Maa, sore wa boku mo onaji ka"                                                            | That guy's an idiot. This guy's an idiot.<br><br>All the dumbasses showering it with praise are idiots.<br><br>The senseless masses roused, without even understanding its true value.<br><br>But well, am I not the same"                                                                |
-| 嗚呼、何かが足りない。<br><br>これだけ盗んだのに少しも満たされない。<br><br>上面の言葉一つじゃ満たされない。<br><br>愛が知りたい。金が足りない。<br><br>この妬みを満たすくらい美しいものを知りたい。                     | ā, nani ka ga tarinai.<br><br>Kore dake nusunda noni sukoshi mo mitasarenai.<br><br>Uwatsura no kotoba hitotsu ja mitasarenai.<br><br>Ai ga shiritai. kane ga tarinai.<br><br>Kono netami o mitasu kurai utsukushii mono o shiritai.             | Aah, something's not enough.<br><br>I stole this much yet I'm not fulfilled[[#^1]] in the slightest.<br><br>I'm not fulfilled with one superficial word.<br><br>I want to know love. Money's not enough.[[#^2]]<br><br>I want to know something beautiful enough to satisfy this envy.    |
-| 「音楽の切っ掛けが何なのか、<br><br>今じゃもう忘れちまったが欲じゃないことは覚えてる。<br><br>何か綺麗なものだったな。                                                                    | "Ongaku no kikkake ga nan nano ka,<br><br>Ima ja mō wasurechimatta ga yoku janai koto wa oboeteru.<br><br>Nani ka kireina mono datta na.                                                                                                         | "By now I've already long forgotten why I started music,<br><br>but I remember it wasn't for want.<br><br>It was for something beautiful wasn't it.                                                                                                                                       |
-| 化けの皮なんていつか剥がれる。<br><br>見向きもされない夜が来る。<br><br>その時に見られる景色が心底楽しみで。                                                                         | Bakenokawa nante itsuka hagareru.<br><br>Mimuki mosarenai yoru ga kuru.<br><br>Sono tokini mirareru keshiki ga shinsoko tanoshimi de.                                                                                                            | My mask will eventually come off.<br><br>Night will come without me even noticing it.<br><br>I'm looking forward from the bottom of my heart to the view that can be seen then.                                                                                                           |
-| そうだ。<br><br>何一つもなくなって、地位も愛も全部なくなって。<br><br>何もかも失った後に見える夜は本当に綺麗だろうから、<br><br>本当に、本当に綺麗だろうから、                                            | Sō da.<br><br>Nani hitotsu mo nakunatte, chii mo ai mo zenbu nakunatte.<br><br>Nanimokamo ushinatta ato ni mieru yoru wa hontōni kirei darou kara,<br><br>Hontōni, hontōni kirei darou kara,                                                     | Right.<br><br>Losing every last bit, losing status and love and it all.<br><br>The night you can see after you've lost anything and everything must truly be beautiful, <br><br>Truly, truly beautiful, and so,                                                                           |
-| 僕は盗んだ」                                                                                                                                 | Boku wa nusunda"                                                                                                                                                                                                                                 | I stole"                                                                                                                                                                                                                                                                                  |
-| 嗚呼、まだ足りない。もっと書きたい。<br><br>こんな詩じゃ満たされない。<br><br>君らの罵倒じゃあ僕は満たされない。<br><br>まだ知らない愛を書きたい。<br><br>この心を満たすくらい美しいものを知りたい。                     | ā, mada tarinai. motto kakitai.<br><br>Konna uta ja mitasarenai.<br><br>Kimira no batō jā boku wa mitasarenai.<br><br>Mada shiranai ai o kakitai.<br><br>Kono kokoro o mitasu kurai utsukushii mono o shiritai.                                  | Aah, it's not enough. I want to write more.<br><br>I'm not fulfilled with this kind of song.<br><br>All your condemnations won't fulfill me.<br><br>I want to write about the love I still don't know.<br><br>I want to know something beautiful enough to fulfill this heart.            |
-| まだ足りない。まだ足りない。<br><br>まだ足りない。まだ足りない。<br><br>まだ足りない。僕は足りない。<br><br>ずっと足りないものがわからない。<br><br>まだ足りない。もっと知りたい。<br><br>この身体を溶かすくらい美しい夜を知りたい。 | Mada tarinai. mada tarinai.<br><br>Mada tarinai. mada tarinai.<br><br>Mada tarinai. boku wa tarinai.<br><br>Zutto tarinai mono ga wakaranai.<br><br>Mada tarinai. motto shiritai.<br><br>Kono karada wo tokasu kurai utsukushii yoru o shiritai. | It's not enough. It's not enough.<br><br>It's not enough. It's not enough.<br><br>It's not enough. I'm not enough.<br><br>I don't know what I've always been missing.<br><br>It's not enough. I want to know more.<br><br>I want to know a night beautiful enough to melt away this body. |
+| Japanese                                                                                                                               | Romanji                                                                                                                                                                                                                                          | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                 | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^3]]                                                                                                                                                                                                                               |
+| -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 「音楽の切っ掛けは何だっけ。<br><br>父の持つレコードだったかな。<br><br>音を聞くことは気持ちが良い。<br><br>聞くだけなら努力もいらない。                                                       | "Ongaku no kikkake wa nan dakke.<br><br>Chichi no motsu reko-do datta ka na.<br><br>Oto o kiku koto wa kimochi ga ii.<br><br>Kiku dake nara doryoku mo iranai.                                                                                   | "Why was it that I started music again.<br><br>I wonder if it was the records my father had.<br><br>Listening to the sound feels good.<br><br>Just listening doesn't take any work.                                                                                                       | "Thứ đưa tôi đến với âm nhạc là gì ta?<br><br>Chắc là chiếc đĩa than của bố tôi chăng<br><br>Nghe tiếng của nó tôi thấy dễ chịu lắm<br><br>Cơ mà chỉ nghe thôi thì cũng đâu tốn sức lực gì                                                                                                                  |
+| 前置きはいいから話そう。<br><br>ある時、思い付いたんだ。<br><br>この歌が僕の物になれば、この穴は埋まるだろうか。                                                                       | Maeoki wa ii kara hanasou.<br><br>Aru toki, omoitsuita n da.<br><br>Kono uta ga boku no mono ni nareba, kono ana wa umaru darou ka.                                                                                                              | Let's start with a preface.<br><br>One day, I thought of this.<br><br>If this song could become mine, would this hole be filled.                                                                                                                                                          | Thôi, bỏ qua dạo đầu đi, để tôi kể cho nghe<br><br>Có lần tôi đã nghĩ thế này<br><br>Nếu thứ âm nhạc này thuộc về tôi thì lỗ hổng này liệu có được lấp đầy không?                                                                                                                                           |
+| だから、僕は盗んだ」                                                                                                                             | Dakara, boku wa nusunda"                                                                                                                                                                                                                         | And so, I stole"                                                                                                                                                                                                                                                                          | Vậy nên tôi đã ăn trộm nó"                                                                                                                                                                                                                                                                                  |
+| 嗚呼、まだ足りない。全部足りない。<br><br>何一つも満たされない。<br><br>このまま一人じゃあ僕は生きられない。<br><br>もっと知りたい。愛を知りたい。<br><br>この心を満たすくらい美しいものを知りたい。                     | ā, mada tarinai. zenbu tarinai.<br><br>Nani hitotsu mo mitasarenai.<br><br>Kono mama hito jā boku wa ikirarenai.<br><br>Motto shiritai. ai o shiritai.<br><br>Kono kokoro o mitasu kurai utsukushii mono o shiritai.                             | Aah, it's not enough. It's all not enough.<br><br>I'm not fulfilled one bit.<br><br>I can't keep on living if I'm alone like this.<br><br>I want to know more. I want to know love.<br><br>I want to know something beautiful enough to fulfill this heart.                               | Ah, ta vẫn chưa thấy đủ, tất cả đều không đủ<br><br>Ta không thấy thỏa mãn bất cứ thứ gì cả!<br><br>Nếu cứ cô độc thế này ta sẽ không thể sống được mất<br><br>Ta muốn biết nhiều hơn, ta muốn được yêu thương!<br><br>Ta muốn thứ gì đó đẹp đẽ đến mức lấp đầy được trái tim này!                          |
+| 「ある時に、街を流れる歌が僕の曲だってことに気が付いた。<br><br>売れたなんて当たり前さ。<br><br>名作を盗んだものだからさぁ！                                                                 | "Aru tokini, machi o nagareru uta ga boku no kyoku datte kotoni ki ga tsuita.<br><br>Ureta nante atarimae sa.<br><br>Meisaku o nusunda mono da kara saa!                                                                                         | "One day, I realized that the song popular around town was in fact my own.<br><br>Of course it would sell well.<br><br>I stole it from a masterpiece after all!                                                                                                                           | "Có lần tôi nhận ra ca khúc vang lên trong thành phố này là bài của tôi<br><br>Nó nổi tiếng thì cũng phải thôi<br><br>Vì tôi đã ăn trộm từ các tác phẩm nổi tiếng mà!                                                                                                                                       |
+| 彼奴も馬鹿だ。こいつも馬鹿だ。<br><br>褒めちぎる奴等は皆馬鹿だ。<br><br>群がる烏合の衆、本当の価値なんてわからずに。<br><br>まぁ、それは僕も同じか」                                                 | Aitsu mo baka da. koitsu mo baka da.<br><br>Homechigiru yatsura wa minna baka da.<br><br>Muragaru ugō no shū, hontō no kachi nante wakarazu ni.<br><br>Maa, sore wa boku mo onaji ka"                                                            | That guy's an idiot. This guy's an idiot.<br><br>All the dumbasses showering it with praise are idiots.<br><br>The senseless masses roused, without even understanding its true value.<br><br>But well, am I not the same"                                                                | Tên đó thật ngu ngốc, cha này cũng thật ngu xuẩn<br><br>Những kẻ tung hô mấy bài hát đó toàn một đám ngờ nghệch<br><br>Cái đám ô hợp xúm lại kia chẳng biết gì về giá trị thật hết<br><br>Ủa mà tôi thì cũng có khác gì đâu"                                                                                |
+| 嗚呼、何かが足りない。<br><br>これだけ盗んだのに少しも満たされない。<br><br>上面の言葉一つじゃ満たされない。<br><br>愛が知りたい。金が足りない。<br><br>この妬みを満たすくらい美しいものを知りたい。                     | ā, nani ka ga tarinai.<br><br>Kore dake nusunda noni sukoshi mo mitasarenai.<br><br>Uwatsura no kotoba hitotsu ja mitasarenai.<br><br>Ai ga shiritai. kane ga tarinai.<br><br>Kono netami o mitasu kurai utsukushii mono o shiritai.             | Aah, something's not enough.<br><br>I stole this much yet I'm not fulfilled[[#^1]] in the slightest.<br><br>I'm not fulfilled with one superficial word.<br><br>I want to know love. Money's not enough.[[#^2]]<br><br>I want to know something beautiful enough to satisfy this envy.    | Ah sao cứ thấy thiếu gì đó<br><br>Ta đã ăn trộm nhiều như thế mà không thấy vừa lòng gì cả<br><br>Một chút ngôn từ chỉ được cái mã như thế sao mà thỏa mãn được!<br><br>Ta muốn biết về tình yêu, ta muốn có thêm tiền!<br><br>Ta muốn biết đến thứ gì đó đẹp đẽ đến mức thỏa mãn được lòng đố kị trong ta! |
+| 「音楽の切っ掛けが何なのか、<br><br>今じゃもう忘れちまったが欲じゃないことは覚えてる。<br><br>何か綺麗なものだったな。                                                                    | "Ongaku no kikkake ga nan nano ka,<br><br>Ima ja mō wasurechimatta ga yoku janai koto wa oboeteru.<br><br>Nani ka kireina mono datta na.                                                                                                         | "By now I've already long forgotten why I started music,<br><br>but I remember it wasn't for want.<br><br>It was for something beautiful wasn't it.                                                                                                                                       | "Thứ đưa tôi đến với âm nhạc là gì vậy ta?<br><br>Tôi quên mất rồi, nhưng tôi biết nó không phải là thứ ham muốn gì cả<br><br>Hẳn đó phải là một thức gì đó đẹp đẽ lắm                                                                                                                                      |
+| 化けの皮なんていつか剥がれる。<br><br>見向きもされない夜が来る。<br><br>その時に見られる景色が心底楽しみで。                                                                         | Bakenokawa nante itsuka hagareru.<br><br>Mimuki mosarenai yoru ga kuru.<br><br>Sono tokini mirareru keshiki ga shinsoko tanoshimi de.                                                                                                            | My mask will eventually come off.<br><br>Night will come without me even noticing it.<br><br>I'm looking forward from the bottom of my heart to the view that can be seen then.                                                                                                           | Cái vỏ giả tạo sớm rồi cũng sẽ bong ra<br><br>Màn đêm không được ngó ngàng tới rồi sẽ đến<br><br>Tận trong thâm tâm tôi rất mong ngóng khung cảnh tôi sẽ được thấy khi ấy                                                                                                                                   |
+| そうだ。<br><br>何一つもなくなって、地位も愛も全部なくなって。<br><br>何もかも失った後に見える夜は本当に綺麗だろうから、<br><br>本当に、本当に綺麗だろうから、                                            | Sō da.<br><br>Nani hitotsu mo nakunatte, chii mo ai mo zenbu nakunatte.<br><br>Nanimokamo ushinatta ato ni mieru yoru wa hontōni kirei darou kara,<br><br>Hontōni, hontōni kirei darou kara,                                                     | Right.<br><br>Losing every last bit, losing status and love and it all.<br><br>The night you can see after you've lost anything and everything must truly be beautiful, <br><br>Truly, truly beautiful, and so,                                                                           | Đúng rồi.<br><br>Sau khi từng thứ một đều biến mất, địa vị rồi tình yêu, tất cả đều ra đi<br><br>Sau khi mất đi tất cả, thì màn đêm mà tôi nhìn thấy hẳn là đẹp lắm<br><br>Nó thật sự, thật sự sẽ đẹp lắm                                                                                                   |
+| 僕は盗んだ」                                                                                                                                 | Boku wa nusunda"                                                                                                                                                                                                                                 | I stole"                                                                                                                                                                                                                                                                                  | Vậy nên tôi đã đi ăn trộm"                                                                                                                                                                                                                                                                                  |
+| 嗚呼、まだ足りない。もっと書きたい。<br><br>こんな詩じゃ満たされない。<br><br>君らの罵倒じゃあ僕は満たされない。<br><br>まだ知らない愛を書きたい。<br><br>この心を満たすくらい美しいものを知りたい。                     | ā, mada tarinai. motto kakitai.<br><br>Konna uta ja mitasarenai.<br><br>Kimira no batō jā boku wa mitasarenai.<br><br>Mada shiranai ai o kakitai.<br><br>Kono kokoro o mitasu kurai utsukushii mono o shiritai.                                  | Aah, it's not enough. I want to write more.<br><br>I'm not fulfilled with this kind of song.<br><br>All your condemnations won't fulfill me.<br><br>I want to write about the love I still don't know.<br><br>I want to know something beautiful enough to fulfill this heart.            | Ah, vẫn chưa hề đủ, ta muốn viết nhiều hơn!<br><br>Mấy bài hát này không khiến ta vừa lòng được!<br><br>Sự nhục mạ của các người cũng không thỏa mãn được ta!<br><br>Ta muốn viết về tình yêu chưa được biến tới<br><br>Ta muốn biết về một thứ đẹp đẽ đến mức lấp đầy trái tim này!                        |
+| まだ足りない。まだ足りない。<br><br>まだ足りない。まだ足りない。<br><br>まだ足りない。僕は足りない。<br><br>ずっと足りないものがわからない。<br><br>まだ足りない。もっと知りたい。<br><br>この身体を溶かすくらい美しい夜を知りたい。 | Mada tarinai. mada tarinai.<br><br>Mada tarinai. mada tarinai.<br><br>Mada tarinai. boku wa tarinai.<br><br>Zutto tarinai mono ga wakaranai.<br><br>Mada tarinai. motto shiritai.<br><br>Kono karada wo tokasu kurai utsukushii yoru o shiritai. | It's not enough. It's not enough.<br><br>It's not enough. It's not enough.<br><br>It's not enough. I'm not enough.<br><br>I don't know what I've always been missing.<br><br>It's not enough. I want to know more.<br><br>I want to know a night beautiful enough to melt away this body. | Chưa đủ! Chưa đủ<br><br>Thật thiếu thốn! Ta muốn thêm!<br><br>Vẫn chưa đủ mà! Ta muốn nhiều hơn nữa!<br><br>Ta vẫn không biết rốt cuộc mình thiếu thứ gì!<br><br>Vẫn chưa đủ! Ta muốn biết thêm!<br><br>Biết đến màn đêm đẹp đẽ làm tan chảy tấm thân ta!                                                   |
 ##### Notes
 >The verb here, 満たす, primarily means "to satisfy, to fulfill", etc. but also has the secondary meaning of "to fill (e.g. a hole)”. To be consistent with the translation of the novel I went with fulfill. ^1
 
 >Minor wordplay in that the phrase in Japanese can mean "I don't have enough money", when in context it's clear that he means money is not enough to "know love" or to fulfill him. ^2
+
+> Cả 3 bài Haru Hisagi, Shisouhan và Tousaku này đều có một điểm chung đó là thể hiện sự cô độc của người nhạc sĩ, một con người đói khát tình cảm và đi đạo nhạc khắp nơi để thu hút sự chú ý. Nhưng ở mỗi bài lại nói lên 1 lí do khác nhau về việc vì sao nhạc sĩ lại chọn con đường đạo nhạc mặc dù biết rõ nó trái với lương tâm mình. Ở bài Haru Hisagi, đó là do cuộc sống bộn bề nhiều lo toan, cơm áo gạo tiền không cho phép người nhạc sĩ sống đúng với bản thân mình. Ở bài Shisouhan, đó là do người nhạc sĩ muốn kết thúc cuộc đời mình theo cách đẹp đẽ phim ảnh nhất nên đã nuôi ý định gây tội ác, nhưng cuối cùng ý nghĩ đó không thể thực hiện vì nhạc sĩ vẫn còn nuối tiếc với cuộc đời, và cuối cùng vẫn tiếp tục chuỗi ngày đeo mặt nạ viết ra những ca khúc lừa dối thiên hạ (Nếu ai vẫn chưa hiểu hoặc quên rồi thì mời xem lại 2 video trước, không xem là tui buồn à nhaa). Ở bài Tousaku này sẽ là một lí do khác và lí do này sẽ nêu lên mâu thuẫn trong con người nhạc sĩ.
+> 
+> À trước khi nói đến phần lí do thì mình sẽ nói đến bố cục bài này trước. Bài này ngoại trừ điệp khúc ra thì các phần khác đều là viết theo dạng đang kể chuyện cho một ai đó nghe. Và theo như mình đọc trên website riêng của album Tousaku thì người nghe nhân vật chính kể chuyện là một thiếu niên mới quen (trong bản album phiên bản giới hạn sẽ có kèm băng cassette ghi âm bản Sonata ánh trăng do cậu thiếu niên đó chơi).
+> 
+> Rồi giờ đi vào phân tích nè. Ở lời 1 thì nhạc sĩ kể về cơ duyên mình đến với âm nhạc, đó là vì cảm giác nghe nhạc rất khoan khoái, nhưng chỉ nghe thôi thì chưa đủ vì nó không thể thỏa mãn được những ham muốn, thiếu thốn trong con người nhạc sĩ, bởi vậy anh ta đi đạo nhạc với mong muốn lấp đầy lỗ hổng trong mình với những ca từ đẹp đẽ (lí do số 1). Thế nhưng những thứ đi ăn cắp không thể dễ dàng làm hài lòng bản thân được, bởi vì anh ta không nhận được tình yêu đích thực và vẫn luôn đơn độc một mình. 
+> 
+> Ở phần lời 2 ta biết được rằng người nhạc sĩ đã trở nên nổi tiếng vì nhạc của anh ta đã được nhiều người biết đến, nhưng như trong Haru Hisagi đã nói, đó đều là thứ âm nhạc rẻ tiền phù hợp với thị hiếu đại chúng, nên người nhạc sĩ mới nói những kẻ tung hô thứ âm nhạc đó đều là một đám ngớ ngẩn, và rồi chợt nhận ra bản thân mình viết ra thứ âm nhạc đó cũng không có ngầu hơn là bao. Và thế là dù đã nổi tiếng nhưng người nhạc sĩ vẫn không thỏa mãn.
+> 
+> Nhưng bạn có đặt câu hỏi vì sao người nhạc sĩ lại không có được tình yêu trong cuộc đời không? Câu trả lời nằm ở phần sau, chính là lí do thứ 2 cho việc đạo nhạc. Người nhạc sĩ nói rằng lí do thật sự mà anh ta đạo nhạc không hề liên quan gì đến ham muốn thỏa mãn hay gì, đó chỉ đơn thuần là một thứ rất đẹp đẽ. Và thứ mà anh ta muốn nhìn thấy chính là bầu trời đêm sau khi đã mất đi tất cả tiền tài, địa vị, tình yêu các thứ. Nói cho dễ hiểu thì mời bạn xem lại video Shisouhan, trong đó có một câu “chiều hoàng hôn sau câu tạm biệt thật đẹp, em cũng biết mà phải không?”. Bình thường xem mấy cái phim SE đó, bạn sẽ thấy kết phim sau khi nhân vật chính mất đi mọi thứ thường cảnh quay nó cực kỳ đẹp cực kỳ tráng lệ. Trong Shisouhan, người nhạc sĩ vì muốn được đón cái kết đẹp nhất trong cuộc đời nên đã nảy sinh ý định gây tội ác nhưng không thực hiện được nên lại tiếp tục viết nhạc. Và sang đến bài này, anh ta giải thích thêm rằng nếu như vậy thì anh ta sẽ tiếp tục đạo nhạc, đến 1 ngày nào đó cái vỏ giả tạo sẽ bị người đời phơi bày, và khi đó sự nghiệp của anh ta sẽ kết thúc, anh ta sẽ mất tất cả và sẽ được nhìn khung cảnh tráng lệ nhất đời mình. Thế nhưng lí do số 1 và số 2 lại là 2 lí do đối nghịch nhau. Lí do số 1 là anh ta muốn có tình yêu, muốn được lấp đầy những mong muốn của mình, nhưng để đạt được lí do số 2 thì anh ta phải đánh mất mọi thứ, kể cả tình yêu. Và thế là người nhạc sĩ không có cơ hội được chọn lựa tình yêu trong cuộc đời và anh ta cứ mãi bế tắc lẩn quẩn như vậy. 
+> 
+> Đến đây là hết phần giải thích lyrics rồi. Trong MV Yorushika phát hành có 1 đoạn mô tả mình thấy rất hay nên muốn dịch cho mọi người đọc. n-buna có nói rằng khách quan mà nói thực ra tất cả các tác phẩm hiện nay đều là đạo nhạc hết, vấn đề chỉ là vô tình hay cố ý mà thôi. Và “giá trị của một tác phẩm thì không phụ thuộc vào sự đánh giá của người khác. Ăn trộm hay không ăn trộm chỉ là một loại thông tin không hơn không kém. Giá trị thực sự của nó không nằm ở đó. Chỉ cần nghe 1 lần, xem 1 lần và bạn cảm thấy tác phẩm ấy thật đẹp thì cảm giác đó sẽ quyết định giá trị của tác phẩm đó đối với cuộc đời bạn”. Yeah mình nghĩ Yorushika cho đến giờ đã làm rất tốt để chúng ta hiểu được điều này. ^3
