--- a/(2020) Plagiarism/10. Thoughtcrime.md
+++ b/(2020) Plagiarism/10. Thoughtcrime.md
@@ -1,20 +1,20 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-思想犯 | Shisouhan [[#^title]]
+思想犯 | Shisouhan [[#^title]] | Tội tư tưởng
 #### Lyrics
 
-| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                  | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                           |
-| ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 他人に優しいあんたにこの心がわかるものか<br><br>人を呪うのが心地良い、だから詩を書いていた<br><br>朝の報道ニュースにいつか載ることが夢だった<br><br>その為に包丁を研いでる                            | Hito ni yasashii anta ni kono kokoro ga wakaru mono ka<br><br>Hito o norou no ga kokochi ii, dakara uta wo kaiteita<br><br>Asa no hōdō nyu-su ni itsuka noru koto ga yume datta<br><br>Sono tame ni hōchō wo toideru                                                     | As if you, who's kind to others, could fucking understand this heart<br><br>Cursing others feels good, and so I wrote songs<br><br>It was my dream to one day be on the morning news<br><br>That's why I'm now sharpening my knife                                                                                  |
-| 硝子を叩きつける音、何かの紙を破くこと、<br><br>さよならの後の夕陽が美しいって、君だってわかるだろ                                                                        | Garasu o tatakitsukeru oto, nani ka no kami o yabuku koto,<br><br>Sayonara no ato no yūhi ga utsukushii tte, kimi datte wakaru daro                                                                                                                                      | The sound of smashing glass, ripping up some sort of paper,<br><br>The setting sun after goodbye is beautiful, even you must understand that!                                                                                                                                                                       |
-| 烏の歌に茜<br><br>この孤独も今音に変わる<br><br>面影に差した日暮れ<br><br>爪先立つ、雲が焼ける、さよならが口を滑る                                                        | Karasu no uta ni akane<br><br>Kono kodoku mo ima oto ni kawaru<br><br>Omokage ni sashita higure<br><br>Tsumasakidatsu, kumo ga yakeru, sayonara ga kuchi o suberu                                                                                                        | The crow's song goes to red[[#^1]]<br><br>This loneliness too will now change to sound<br><br>Twilight, shined upon lingering face<br><br>Standing on tiptoes[[#^2]], clouds glow red, goodbye slips from my mouth                                                                                                  |
-| 認められたい、愛したい<br><br>これが夢ってやつか<br><br>何もしなくても叶えよ、早く、僕を満たしてくれ<br><br>他人に優しい世間にこの妬みがわかるものか<br><br>いつも誰かを殴れる機会を探してる               | Mitomeraretai, aishitai<br><br>Kore ga yume tte yatsu ka<br><br>Nani mo shinakute mo kanaeyo, hayaku, boku o mitashitekure<br><br>Hito ni yasashii seken ni kono netami ga wakaru mono ka<br><br>Itsumo dareka wo nagureru kikai o sagashiteru                           | I want to be recognized, I want to love<br><br>Is this that thing they call dreams<br><br>Just grant them without doing anything, c'mon, hurry up and fulfill me<br><br>As if society, that's kind to others, could ever really understand this envy<br><br>I'm always searching for an opportunity to beat someone |
-| ビール瓶で殴る街路灯、投げるギターの折れる音、<br><br>戻らない後悔の全部が美しいって、そういうのさぁ、僕だってわかるのに                                                             | Bi-rubin de naguru gairotō, nageru gita- no oreru oto,<br><br>Modoranai kōkai no zenbu ga utsukushii tte, sōiu no saa, boku datte wakaru noni                                                                                                                            | A beer bottle striking a streetlamp, the sound of a flung guitar snapping,<br><br>That all of the regret of not going back is beautiful, that stuff ya know, even though I understand it!                                                                                                                           |
-| 言葉の雨に打たれ<br><br>秋惜しむまま冬に落ちる<br><br>春の山のうしろからまた一つ煙が立つ<br><br>夏風が頬を滑る                                                          | Kotoba no ame ni utare<br><br>Aki oshimu mama fuyu ni ochiru<br><br>Haru no yama no ushiro kara mata hitotsu kemuri ga tatsu<br><br>Natsu kaze ga hoho wo suberu                                                                                                         | Struck by rain of words<br><br>While fall is sparing, winter falls<br><br>From behind the spring mountain, another lone smoke rises[[#^3]]<br><br>Summer wind slips across my cheek                                                                                                                                 |
-| 他人に優しいあんたにこの孤独がわかるものか<br><br>死にたくないが生きられない、だから詩を書いている<br><br>罵倒も失望も嫌悪も僕への興味だと思うから<br><br>他人を傷付ける詩を書いてる<br><br>こんな中身のない詩を書いてる | Hito ni yasashii anta ni kono kodoku ga wakaru mono ka<br><br>Shinitakunai ga ikirarenai, dakara uta wo kaiteiru<br><br>Batō mo shitsubō mo ken'o mo boku e no kyōmi da to omou kara<br><br>Hito wo kizutsukeru uta wo kaiteru<br><br>Konna nakami no nai uta wo kaiteru | As if you, who's kind to others, could fucking understand this loneliness<br><br>I don't want to die but I can't live, and so I'm writing songs<br><br>I think condemnation, disappointment, and disgust are all interesting to me so<br><br>I'm writing songs to hurt others<br><br>I'm writing these hollow songs |
-| 君の言葉が呑みたい<br><br>入れ物もない両手で受けて<br><br>いつしか喉が潤う<br><br>その時を待ちながら                                                               | Kimi no kotoba ga nomitai<br><br>Iremono mo nai ryōte de ukete<br><br>Itsushika nodo ga uruou<br><br>Sono toki o machi nagara                                                                                                                                            | I want to gulp down your words<br><br>Without a container anymore, I'll take them in cupped hands[[#^4]]<br><br>My throat waters before I realize it<br><br>And while waiting for that moment,                                                                                                                      |
-| 烏の歌に茜<br><br>この孤独よ今詩に変われ<br><br>さよなら、君に茜<br><br>僕は今、夜を待つ<br><br>また明日。口が滑る                                                    | Karasu no uta ni akane<br><br>Kono kodoku yo ima uta ni kaware<br><br>Sayonara, kimi ni akane<br><br>Boku wa ima, yoru o matsu<br><br>Mata ashita. kuchi ga suberu                                                                                                       | The crow's song goes to red<br><br>Oh this loneliness, turn now to song<br><br>Goodbye, you to red<br><br>Now, I wait for night<br><br>See you tomorrow. My mouth slips                                                                                                                                             |
+| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                                  | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                           | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^5]]                                                                                                                                                                                                                                                                          |
+| ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 他人に優しいあんたにこの心がわかるものか<br><br>人を呪うのが心地良い、だから詩を書いていた<br><br>朝の報道ニュースにいつか載ることが夢だった<br><br>その為に包丁を研いでる                            | Hito ni yasashii anta ni kono kokoro ga wakaru mono ka<br><br>Hito o norou no ga kokochi ii, dakara uta wo kaiteita<br><br>Asa no hōdō nyu-su ni itsuka noru koto ga yume datta<br><br>Sono tame ni hōchō wo toideru                                                     | As if you, who's kind to others, could fucking understand this heart<br><br>Cursing others feels good, and so I wrote songs<br><br>It was my dream to one day be on the morning news<br><br>That's why I'm now sharpening my knife                                                                                  | Tốt bụng như các người liệu có thể nào hiểu được trái tim ta?<br><br>Nguyền rủa ai đó khiến ta thỏa mãn, vậy nên ta viết ra những dòng thơ này<br><br>Ta mơ thấy một ngày nào đó mình được lên bản tin buổi sáng<br><br>Vậy nên ta đang đi mài dao đây                                                                                                 |
+| 硝子を叩きつける音、何かの紙を破くこと、<br><br>さよならの後の夕陽が美しいって、君だってわかるだろ                                                                        | Garasu o tatakitsukeru oto, nani ka no kami o yabuku koto,<br><br>Sayonara no ato no yūhi ga utsukushii tte, kimi datte wakaru daro                                                                                                                                      | The sound of smashing glass, ripping up some sort of paper,<br><br>The setting sun after goodbye is beautiful, even you must understand that!                                                                                                                                                                       | Tiếng thủy tinh đập vỡ, cảm giác xe toạc một mảnh giấy<br><br>Chiều hoàng hôn sau phút tạm biệt đẹp nhường nào, em biết mà phải không?                                                                                                                                                                                                                 |
+| 烏の歌に茜<br><br>この孤独も今音に変わる<br><br>面影に差した日暮れ<br><br>爪先立つ、雲が焼ける、さよならが口を滑る                                                        | Karasu no uta ni akane<br><br>Kono kodoku mo ima oto ni kawaru<br><br>Omokage ni sashita higure<br><br>Tsumasakidatsu, kumo ga yakeru, sayonara ga kuchi o suberu                                                                                                        | The crow's song goes to red[[#^1]]<br><br>This loneliness too will now change to sound<br><br>Twilight, shined upon lingering face<br><br>Standing on tiptoes[[#^2]], clouds glow red, goodbye slips from my mouth                                                                                                  | Sắc đỏ thẫm quyện vào lời ca của đàn quạ<br><br>Nỗi cơ đơn này ngay lúc này cũng sẽ hóa thành tiếng hát<br><br>Chiều hoàng hôn hắt xuống bóng em<br><br>Kiễng chân lên, dưới trời mây rực đỏ, ta buông lời tạm biệt                                                                                                                                    |
+| 認められたい、愛したい<br><br>これが夢ってやつか<br><br>何もしなくても叶えよ、早く、僕を満たしてくれ<br><br>他人に優しい世間にこの妬みがわかるものか<br><br>いつも誰かを殴れる機会を探してる               | Mitomeraretai, aishitai<br><br>Kore ga yume tte yatsu ka<br><br>Nani mo shinakute mo kanaeyo, hayaku, boku o mitashitekure<br><br>Hito ni yasashii seken ni kono netami ga wakaru mono ka<br><br>Itsumo dareka wo nagureru kikai o sagashiteru                           | I want to be recognized, I want to love<br><br>Is this that thing they call dreams<br><br>Just grant them without doing anything, c'mon, hurry up and fulfill me<br><br>As if society, that's kind to others, could ever really understand this envy<br><br>I'm always searching for an opportunity to beat someone | Ta muốn được công nhận, ta muốn yêu đương<br><br>Đây là ước mơ mà người đời vẫn nói sao?<br><br>Vậy thì hãy thành toàn cho ta đi, mau lên, ta muốn được thỏa mãn!<br><br>Thế gian dịu dàng với kẻ khác này sao có thể hiểu lòng ghen tuông trong ta?<br><br>Ta vẫn luôn đi tìm cơ hội để đánh người đây!                                               |
+| ビール瓶で殴る街路灯、投げるギターの折れる音、<br><br>戻らない後悔の全部が美しいって、そういうのさぁ、僕だってわかるのに                                                             | Bi-rubin de naguru gairotō, nageru gita- no oreru oto,<br><br>Modoranai kōkai no zenbu ga utsukushii tte, sōiu no saa, boku datte wakaru noni                                                                                                                            | A beer bottle striking a streetlamp, the sound of a flung guitar snapping,<br><br>That all of the regret of not going back is beautiful, that stuff ya know, even though I understand it!                                                                                                                           | Chiếc đèn đường bị đập vỡ bằng vỏ chai, tiếng cây ghita bị quăng đi rồi vỡ vụn<br><br>Những hối hận không quay lại, tất thảy đều quá đỗi đẹp<br>Ta biết rõ điều đó chứ, ấy vậy mà...                                                                                                                                                                   |
+| 言葉の雨に打たれ<br><br>秋惜しむまま冬に落ちる<br><br>春の山のうしろからまた一つ煙が立つ<br><br>夏風が頬を滑る                                                          | Kotoba no ame ni utare<br><br>Aki oshimu mama fuyu ni ochiru<br><br>Haru no yama no ushiro kara mata hitotsu kemuri ga tatsu<br><br>Natsu kaze ga hoho wo suberu                                                                                                         | Struck by rain of words<br><br>While fall is sparing, winter falls<br><br>From behind the spring mountain, another lone smoke rises[[#^3]]<br><br>Summer wind slips across my cheek                                                                                                                                 | Ta lại bị dày vò trong cơn mưa ngôn từ<br><br>Đông qua để lại trong ta tiếc nuối mùa thu<br><br>Một cột khói hiện ra sau ngọn núi mùa xuân<br><br>Làn gió mùa hè sượt qua gò má                                                                                                                                                                        |
+| 他人に優しいあんたにこの孤独がわかるものか<br><br>死にたくないが生きられない、だから詩を書いている<br><br>罵倒も失望も嫌悪も僕への興味だと思うから<br><br>他人を傷付ける詩を書いてる<br><br>こんな中身のない詩を書いてる | Hito ni yasashii anta ni kono kodoku ga wakaru mono ka<br><br>Shinitakunai ga ikirarenai, dakara uta wo kaiteiru<br><br>Batō mo shitsubō mo ken'o mo boku e no kyōmi da to omou kara<br><br>Hito wo kizutsukeru uta wo kaiteru<br><br>Konna nakami no nai uta wo kaiteru | As if you, who's kind to others, could fucking understand this loneliness<br><br>I don't want to die but I can't live, and so I'm writing songs<br><br>I think condemnation, disappointment, and disgust are all interesting to me so<br><br>I'm writing songs to hurt others<br><br>I'm writing these hollow songs | Đối tốt với kẻ khác như các người sao có thể hiểu được nỗi cô đơn trong ta?<br><br>Không muốn chết cũng không thể sống, bởi vậy nên ta viết ra những dòng thơ này<br><br>Chửi rủa, thất vọng, căm ghét là những gì người đời hứng thú về ta<br><br>Bởi vậy nên ta viết lên những lời ca gây tổn thương này<br><br>Viết ra những vần thơ rỗng không này |
+| 君の言葉が呑みたい<br><br>入れ物もない両手で受けて<br><br>いつしか喉が潤う<br><br>その時を待ちながら                                                               | Kimi no kotoba ga nomitai<br><br>Iremono mo nai ryōte de ukete<br><br>Itsushika nodo ga uruou<br><br>Sono toki o machi nagara                                                                                                                                            | I want to gulp down your words<br><br>Without a container anymore, I'll take them in cupped hands[[#^4]]<br><br>My throat waters before I realize it<br><br>And while waiting for that moment,                                                                                                                      | Ta muốn nuốt trọn lời nói của em<br><br>Tiếp nhận lấy nó bằng đôi bàn tay trắng<br><br>Một ngày nào đó tiếng nói trong ta sẽ sống dậy<br><br>Trong lúc chờ đến thời khắc đó                                                                                                                                                                            |
+| 烏の歌に茜<br><br>この孤独よ今詩に変われ<br><br>さよなら、君に茜<br><br>僕は今、夜を待つ<br><br>また明日。口が滑る                                                    | Karasu no uta ni akane<br><br>Kono kodoku yo ima uta ni kaware<br><br>Sayonara, kimi ni akane<br><br>Boku wa ima, yoru o matsu<br><br>Mata ashita. kuchi ga suberu                                                                                                       | The crow's song goes to red<br><br>Oh this loneliness, turn now to song<br><br>Goodbye, you to red<br><br>Now, I wait for night<br><br>See you tomorrow. My mouth slips                                                                                                                                             | Bầu trời nhuộm đỏ tiếng hát của đàn quạ<br><br>Hỡi nỗi cô đơn này, hãy biến thành lời ca đi!<br><br>Tạm biệt em, hỡi người con gái trong ánh chiều đỏ thẫm<br><br>Ta đang chờ màn đêm xuống<br><br>Khẽ thầm thì "mai gặp lại nhé"                                                                                                                      |
 ##### Notes
 >The title is, of course, a reference to George Orwell's incredibly famous novel, 1984. ^title
 
@@ -26,6 +26,17 @@ await dv.view('_script');
 
 >This is another reference to Ozaki Housai. The original line is “Iremono mo nai ryōte de ukete”, which means “Without a container, I accept them in both hands” ^4
 
+> Dưới đây là phần mô tả dưới MV của n-buna:
+> 
+> “Tội nhận thức” là từ được đạo từ cuốn tiểu thuyết 1984 của nhà văn George Orwell. Và khi tôi nói đây là “đạo văn” thì từ khoảnh khắc này trở đi, “đạo văn” sẽ trở thành “kính trọng”. Ranh giới giữa “đạo văn” và “kính trọng” nhìn thì tựa hồ như có tồn tại nhưng thực ra nó không hề xuất hiện ở đâu cả. Nhìn ngược lại mọi thứ vẫn đúng. Sự “kính trọng” mang trong nó đầy đủ những tiềm tàng để trở thành “đạo văn”.
+> 
+> Ca khúc này có chứa bài thơ Haiku của Ozaki Housai và dùng để bày tỏ sự tôn kính đối với những giây cuối đời của ông.
+> 
+> Đây chắc chắn cũng chính là một thể loại đạo văn.”
+> 
+> [...] Giờ mình bàn về nội dung của bài hát. Nhân vật chính trong bài là một người đàn ông mang trong mình nỗi cô đơn và khao khát được chú ý đến. Nhưng cái cách anh ta muốn được chú ý lại là “được lên bản tin buổi sáng”, và thế là anh ta nuôi ý định giết người (mài dao), phá phách, viết ra những bài hát phản động khiến người khác ghê tởm, và đây chính là một “tội phạm nhận thức” nguy hiểm. Anh ta có một người vợ cũ nhưng đã chết, còn cậu bé xuất hiện trong MV là cậu thiếu niên trong tiểu thuyết, dù rất yêu quý người đàn ông này nhưng vì cậu ta đã nói dối nên cuối cùng bị người đàn ông ruồng bỏ. Anh ta muốn cuộc đời của mình sẽ chấm dứt theo cách đẹp đẽ y như vẻ đẹp của hoàng hôn nhuốm máu, khao khát gây tội ác đến tột cùng. Nhưng dù thế anh ta vẫn không thể gây tội, không thể kết thúc cuộc sống của mình, 4 mùa xuân hạ thu đông vẫn trôi qua. Bởi vì sâu thẳm bên trong trái tim anh ta là khao khát được yêu thương, và anh ta lưu luyến những ký ức về người con gái của cuộc đời mình. Cuối cùng anh ta đã từ bỏ ý định gây tội ác để chết, thay vào đó là tiếp tục sống với những chiếc mặt nạ che đi bản chất của mình và thương nhớ người vợ cũ.
+> 
+> Rồi đến đây sẽ có bạn hỏi bài này thì liên quan gì đến thơ Haiku với Ozaki Housai. Ozaki Housai là một nhà thơ Haiku theo thể tự do, sống cuộc đời nghiện rượu, nghèo khổ, tính cách kỳ quặc đi đâu cũng bị người đời ghét. Ông bất lực với cuộc đời nên đã từng nói với vợ rằng "Bà hãy chết chung với tôi đi", tất nhiên người vợ không nghe theo và đã bỏ ông ra đi. Và sau đó ông đã bỏ lại tất cả để bắt đầu cuộc sống phiêu bạt, làm người dọn dẹp trong chùa. Nghe rất giống nhân vật chính trong bài hát này đúng không nào. Trong bài hát này thực ra có 2 câu “đạo” từ thơ Haiku của Housai. Câu thứ nhất là Tiếp nhận lấy nó bằng đôi bàn tay trắng (Iremono no nai ryoute de ukete), và câu thơ gốc là Iremono ga nai ryoute de ukeru. Câu thơ này kể về sự nghèo khổ bần cùng của Housai đến mức đi xin ăn nhưng không có đồ để đựng nên phải chìa hai tay ra để hứng. Nhân vật trong bài hát này có lẽ cũng nghèo đói tình cảm giống y như vậy. Câu thứ hai chính là Một cột khói hiện ra sau ngọn núi mùa xuân (Haru no yama no ushiro kara mata hitotsu kemuri ga tatsu), câu thơ gốc là Haru no yama no ushiro kara kemuri ga dedashita. Câu thơ này được Housai ngâm trước khi mất ở tuổi 41, thể hiện nỗi nhớ ngọn núi quê hương. Kết cục đến lúc chết người ta sẽ chỉ còn lưu luyến những ký ức và quá khứ mà thôi. Chính vì những điểm tương đồng này nên bài hát này mới được n-buna dùng để tưởng niệm những năm cuối đời của Housai. ^5
 #### MV Notes
 At around 1:54 in the MV, the text shows insults such as:  
 "Trashy piece of art"
