--- a/(2020) Plagiarism/11. Escape.md
+++ b/(2020) Plagiarism/11. Escape.md
@@ -1,20 +1,23 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-逃亡 | Toubou
+逃亡 | Toubou | Chạy trốn
 #### Lyrics
 
-| Japanese                                                                                              | Romanji                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                     |
-| ----------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 夏の匂いがしてた<br><br>あぜ道、ひとつ入道雲<br><br>夜が近づくまで今日は歩いてみようよ<br><br>隣の町の夜祭りに行くんだ                               | Natsu no nioi ga shiteta<br><br>Azemichi, hitosu nyuudougumo<br><br>Yoru ga chikazuku made kyō wa aruitemiyou yo<br><br>Tonari no machi no yomatsuri ni iku n da                                                                       | It was smelling like summer<br><br>A footpath in the rice field, one summer cumulonimbus<br><br>Today let's try walking until the night comes<br><br>We're going to the nighttime festival in the town over                                                                                   |
-| 温い夜、誘蛾灯の日暮、鼻歌、軒先の風鈴、<br><br>坂道を下りた向こう側、祭り屋台の憧憬<br><br>夜が近付くまで今日は歩いてみようよ<br><br>上を向いて歩いた、花が夜空に咲いてる     | Nurui yoru, yūgatō no higurashi, hanauta, nokisaki no fūrin,<br><br>Sakamichi o orita mukōgawa, matsuri yatai no dōkei<br><br>Yoru ga chikazuku made kyō wa aruitemiyou yo<br><br>Ue o muite aruita, hana ga yozora ni saiteru         | Lukewarm night, light trap twilight[[#^1]], humming, wind chimes on the eaves,<br><br>Down the other side of the street hill, yearning for the festival stall<br><br>Today let's try walking until the night comes<br><br>We looked upwards and walked, flowers are blooming in the night sky |
-| 夏の匂いがしてた<br><br>あぜ道のずっと向こうへ<br><br>誰一人人の居ない街を探すんだ<br><br>ねぇ、こんな生活はごめんだ                                | Natsu no nioi ga shiteta<br><br>Azemichi no zutto mukō e<br><br>Dare hitori hito no inai machi o sagasu n da<br><br>Nee, konna seikatsu wa gomen da                                                                                    | It was smelling like summer<br><br>Towards far beyond the footpath<br><br>I'm searching for a town without a single person living in it<br><br>Hey, I can’t stand living like this                                                                                                            |
-| さようなら、手を振る影一つ、夜待ち、鼻先のバス停<br><br>思い出の中の風景はつまらぬほど綺麗で<br><br>夜が近付くまで今日も歩いていたんだ<br><br>目蓋を閉じれば見える、夏の匂いがする | Sayōnara, te o furu kage hitotsu, yoru machi, hanasaki no basutei<br><br>Omoide no naka no fūkei wa tsumaranu hodo kirei de<br><br>Yoru ga chikazuku made kyō mo aruiteita n da<br><br>Mabuta wo tojireba mieru, natsu no nioi ga suru | Goodbye, a lone shadow of a waving hand, waiting for night, the bus stop right in front of me<br><br>The scenery inside my memory is, well, boringly pretty<br><br>You know, today as well I was walking until night comes<br><br>If I close my eyes I can see it, it smells like summer      |
-| さぁ、もっと遠く行こうよ<br><br>さぁ、もっと逃げて行こうぜ<br><br>さぁ、僕らつまらないことは全部放っといて<br><br>道の向こうへ                           | Saa, motto tōku ikou yo<br><br>Saa, motto nigeteikou ze<br><br>Saa, bokura tsumaranai koto wa zenbu hottoite<br><br>Michi no mukō e                                                                                                    | Come on, let's go farther away<br><br>Come on, let's run away more<br><br>Come on, leave behind all our boring things<br><br>Towards the other side of the road                                                                                                                               |
-| 夏の匂いがしてた<br><br>あぜ道、ひとつ入道雲<br><br>誰一人人の居ない街で気付くんだ<br><br>君も居ないことにやっと                                  | Natsu no nioi ga shiteta<br><br>Azemichi, hitotsu nyūdōgumo<br><br>Dare hitori hito no inai machi de kizuku n da<br><br>Kimi mo inai koto ni yatto                                                                                     | It was smelling like summer<br><br>The footpath in the rice field, one summer cumulonimbus<br><br>I notice it in the town with not a single person living in it<br><br>That you aren't there either, finally[[#^2]]                                                                           |
-| 温い夜、誘蛾灯の日暮、鼻歌、軒先の風鈴、<br><br>坂道を下りた向こう側、祭り屋台の憧憬<br><br>大人になってもずっと憶えてるから<br><br>ねぇ遠くへ行こうよ、あの丘の向こうへ      | Nukui yoru, yūgatō no higurashi, hanauta, nokisaki no fūrin,<br><br>Sakamichi o orita mukōgawa, matsuri yatai no dōkei<br><br>Otona ni natte mo zutto oboeteru kara<br><br>Nee tōku e ikou yo, ano oka no mukō e                       | Lukewarm night, light trap twilight, humming, wind chimes on the eaves,<br><br>Down the other side of the street hill, yearning for the festival stall<br><br>Because I'll always remember it even when we grow up<br><br>Hey, let's go far away, towards the other side of that hill         |
-| さぁ、もっと遠く行こうよ<br><br>さぁ、もっと逃げて行こうぜ<br><br>さぁ、僕らつまらないことは全部放っといて<br><br>道の向こうへ                           | Saa, motto tōku ikou yo<br><br>Saa, motto nigeteikou ze<br><br>Saa, bokura tsumaranai koto wa zenbu hottoite<br><br>Michi no mukō e                                                                                                    | Come on, let's go farther away<br><br>Come on, let's run away more<br><br>Come on, leave behind all our boring things<br><br>Towards the other side of the road                                                                                                                               |
+| Japanese                                                                                              | Romanji                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                     | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html) [[#^3]]                                                                                                                                                                                                                                    |
+| ----------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 夏の匂いがしてた<br><br>あぜ道、ひとつ入道雲<br><br>夜が近づくまで今日は歩いてみようよ<br><br>隣の町の夜祭りに行くんだ                               | Natsu no nioi ga shiteta<br><br>Azemichi, hitosu nyuudougumo<br><br>Yoru ga chikazuku made kyō wa aruitemiyou yo<br><br>Tonari no machi no yomatsuri ni iku n da                                                                       | It was smelling like summer<br><br>A footpath in the rice field, one summer cumulonimbus<br><br>Today let's try walking until the night comes<br><br>We're going to the nighttime festival in the town over                                                                                   | Mùi hương của mùa hè tỏa ra rồi<br><br>Bên bở ruộng, xa xa cụm mây lớn<br><br>Hôm nay anh sẽ cứ đi đến khi trời gần tối<br><br>Anh sẽ đi đến lễ hội đêm ở thị trấn kế bên                                                                                                                                        |
+| 温い夜、誘蛾灯の日暮、鼻歌、軒先の風鈴、<br><br>坂道を下りた向こう側、祭り屋台の憧憬<br><br>夜が近付くまで今日は歩いてみようよ<br><br>上を向いて歩いた、花が夜空に咲いてる     | Nurui yoru, yūgatō no higurashi, hanauta, nokisaki no fūrin,<br><br>Sakamichi o orita mukōgawa, matsuri yatai no dōkei<br><br>Yoru ga chikazuku made kyō wa aruitemiyou yo<br><br>Ue o muite aruita, hana ga yozora ni saiteru         | Lukewarm night, light trap twilight[[#^1]], humming, wind chimes on the eaves,<br><br>Down the other side of the street hill, yearning for the festival stall<br><br>Today let's try walking until the night comes<br><br>We looked upwards and walked, flowers are blooming in the night sky | Màn đêm nồng ẩm, ve đậu quanh đèn dụ côn trùng, tiếng hát ngâm nga, chuông gió trước mái hiên<br><br>Phía bên kia con đường khi xuống dốc, anh nhìn với theo dãy quán vỉa hè của lễ hội<br><br>Hôm nay anh sẽ cứ đi đến khi trời gần tối<br><br>Vừa đi vừa ngước nhìn, hoa đang nở trên bầu trời đêm             |
+| 夏の匂いがしてた<br><br>あぜ道のずっと向こうへ<br><br>誰一人人の居ない街を探すんだ<br><br>ねぇ、こんな生活はごめんだ                                | Natsu no nioi ga shiteta<br><br>Azemichi no zutto mukō e<br><br>Dare hitori hito no inai machi o sagasu n da<br><br>Nee, konna seikatsu wa gomen da                                                                                    | It was smelling like summer<br><br>Towards far beyond the footpath<br><br>I'm searching for a town without a single person living in it<br><br>Hey, I can’t stand living like this                                                                                                            | Hương thơm của mùa hè phảng phất<br><br>Tít phía xa bên kia bờ ruộng<br><br>Anh sẽ đi tìm một thành phố không có ai ở đó<br><br>Nè em, anh xin lỗi khi sống một cuộc sống như này nhé                                                                                                                            |
+| さようなら、手を振る影一つ、夜待ち、鼻先のバス停<br><br>思い出の中の風景はつまらぬほど綺麗で<br><br>夜が近付くまで今日も歩いていたんだ<br><br>目蓋を閉じれば見える、夏の匂いがする | Sayōnara, te o furu kage hitotsu, yoru machi, hanasaki no basutei<br><br>Omoide no naka no fūkei wa tsumaranu hodo kirei de<br><br>Yoru ga chikazuku made kyō mo aruiteita n da<br><br>Mabuta wo tojireba mieru, natsu no nioi ga suru | Goodbye, a lone shadow of a waving hand, waiting for night, the bus stop right in front of me<br><br>The scenery inside my memory is, well, boringly pretty<br><br>You know, today as well I was walking until night comes<br><br>If I close my eyes I can see it, it smells like summer      | Lời tạm biệt, bóng ai đang vẫy tay, ngóng trông màn đêm, trạm dừng bus trước mặt<br><br>Khung cảnh trong ký ức của anh đẹp đẽ đến mức chán ngắt<br><br>Hôm nay anh lại đi đến khi gần tối rồi<br><br>Nhắm mắt lại anh sẽ nhìn thấy được hương thơm của mùa hè                                                    |
+| さぁ、もっと遠く行こうよ<br><br>さぁ、もっと逃げて行こうぜ<br><br>さぁ、僕らつまらないことは全部放っといて<br><br>道の向こうへ                           | Saa, motto tōku ikou yo<br><br>Saa, motto nigeteikou ze<br><br>Saa, bokura tsumaranai koto wa zenbu hottoite<br><br>Michi no mukō e                                                                                                    | Come on, let's go farther away<br><br>Come on, let's run away more<br><br>Come on, leave behind all our boring things<br><br>Towards the other side of the road                                                                                                                               | Nào, mình hãy đi xa hơn nữa đi!<br><br>Nào, chúng ta hãy chạy trốn xa hơn nữa đi!<br><br>Kìa em, tất cả những thứ tẻ nhạt hãy bỏ lại hết đi<br><br>Cùng đến bên kia con đường nhé                                                                                                                                |
+| 夏の匂いがしてた<br><br>あぜ道、ひとつ入道雲<br><br>誰一人人の居ない街で気付くんだ<br><br>君も居ないことにやっと                                  | Natsu no nioi ga shiteta<br><br>Azemichi, hitotsu nyūdōgumo<br><br>Dare hitori hito no inai machi de kizuku n da<br><br>Kimi mo inai koto ni yatto                                                                                     | It was smelling like summer<br><br>The footpath in the rice field, one summer cumulonimbus<br><br>I notice it in the town with not a single person living in it<br><br>That you aren't there either, finally[[#^2]]                                                                           | Mùi hương của mùa hè tỏa ra rồi<br><br>Bên bở ruộng, xa xa cụm mây lớn<br><br>Tại một thành phố nơi không có bóng người anh đã nhận ra<br><br>Rằng em không còn ở đây nữa                                                                                                                                        |
+| 温い夜、誘蛾灯の日暮、鼻歌、軒先の風鈴、<br><br>坂道を下りた向こう側、祭り屋台の憧憬<br><br>大人になってもずっと憶えてるから<br><br>ねぇ遠くへ行こうよ、あの丘の向こうへ      | Nukui yoru, yūgatō no higurashi, hanauta, nokisaki no fūrin,<br><br>Sakamichi o orita mukōgawa, matsuri yatai no dōkei<br><br>Otona ni natte mo zutto oboeteru kara<br><br>Nee tōku e ikou yo, ano oka no mukō e                       | Lukewarm night, light trap twilight, humming, wind chimes on the eaves,<br><br>Down the other side of the street hill, yearning for the festival stall<br><br>Because I'll always remember it even when we grow up<br><br>Hey, let's go far away, towards the other side of that hill         | Màn đêm nồng ẩm, ve đậu quanh đèn dụ côn trùng, tiếng hát ngâm nga, chuông gió trước mái hiên<br><br>Phía bên kia con đường khi xuống dốc, anh nhìn với theo dãy quán vỉa hè của lễ hội<br><br>Sau này khi lớn lên anh sẽ mãi ghi nhớ chúng trong đầu<br><br>Nên mình hãy đi xa hơn nữa đi, đến bên kia ngọn đồi |
+| さぁ、もっと遠く行こうよ<br><br>さぁ、もっと逃げて行こうぜ<br><br>さぁ、僕らつまらないことは全部放っといて<br><br>道の向こうへ                           | Saa, motto tōku ikou yo<br><br>Saa, motto nigeteikou ze<br><br>Saa, bokura tsumaranai koto wa zenbu hottoite<br><br>Michi no mukō e                                                                                                    | Come on, let's go farther away<br><br>Come on, let's run away more<br><br>Come on, leave behind all our boring things<br><br>Towards the other side of the road                                                                                                                               | Nào, mình hãy đi xa hơn nữa đi!<br><br>Nào, chúng ta hãy chạy trốn xa hơn nữa đi!<br><br>Kìa em, tất cả những thứ tẻ nhạt hãy bỏ lại hết đi<br><br>Cùng đến bên kia con đường nhé                                                                                                                                |
 ##### Notes
 >When sung it's "cicadas in a light trap", but in the written lyrics it's the given translation. And in case you don’t know, a light trap is a bug zapper. Summer stuff. ^1
 
 >Since it might be unclear, the “finally” here means “I finally notice”, not “you finally aren’t there”. ^2
+
+> Giải thích:
+> Về bài hát Toubou này, nó nằm sau track không lời mở ra thời thơ ấu của nhân vật chính và sau đó là bài Yakou nói về kỷ niệm thời còn bé với người vợ. Hơn nữa hình ảnh lẫn cách dùng từ trong bài này cũng rất giống yakou như quán vỉa hè, đèn dụ côn trùng, hình ảnh mùa hè, thị trấn kế bên, phía bên kia con đường vv… ^3
