--- a/(2020) Plagiarism/12. Childhood, In Memories.md
+++ b/(2020) Plagiarism/12. Childhood, In Memories.md
@@ -1,4 +1,4 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-幼年期、思い出の中 | Youshouki, Omoide no Naka
+幼年期、思い出の中 | Youshouki, Omoide no Naka | Thời thơ ấu, trong vùng ký ức
