--- a/(2020) Plagiarism/13. Night Journey.md
+++ b/(2020) Plagiarism/13. Night Journey.md
@@ -4,20 +4,20 @@ await dv.view('_script');
 夜行 | Yakou [[#^title]]
 #### Lyrics
 
-| Japanese                                                         | Romanji                                                                                                                                          | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                 |
-| ---------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| ねぇ、このまま夜が来たら、僕らどうなるんだろうね<br><br>列車にでも乗って行くかい。僕は何処でもいいかな          | nee, kono mama yoru ga kitara, bokura dou narun darou ne<br><br>ressha ni demo notte iku kai. boku wa dokodemo ii kana                           | Hey, if night comes like this, I wonder what'll become of us<br><br>So you're going to ride the train. As for me, I guess anywhere is fine                                                |
-| 君はまだわからないだろうけど、空も言葉で出来てるんだ<br><br>そっか、隣町なら着いて行くよ                 | kimi wa mada wakaranai darou kedo, sora mo kotoba de dekiterunda<br><br>souka, tonarimachi nara tsuite ikuyo                                     | You probably don't understand yet, but the sky is made of words too, you know<br><br>Oh right, if it's the next town over I'll go with you                                                |
-| はらはら、はらはら、はらり<br><br>晴るる原　君が詠む歌や　一輪草<br><br>他には何にもいらないから         | hara hara, hara hara, harari<br><br>haruru hara, kimi ga yomu uta ya ichirinsou<br><br>hoka ni wa nan ni mo iranai kara                          | Gently, gently, gently falling<br><br>Across the clear field, the poems you chant and anemones[[#^1]]<br><br>After all, I don't need anything else                                        |
-| 波立つ夏原、涙尽きぬまま泣くや日暮は夕、夕、夕<br><br>夏が終わって往くんだね<br><br>そうなんだね         | namidatsu natsuhara, namida tsukinu mama naku ya higurashi wa yuu, yuu, yuu<br><br>natsu ga owatte ikunda ne<br><br>sou nanda ne                 | Billowing summer field, whilst tears fail to run dry crying and sunset[[#^2]] is evening, evening, evening[[#^3]]<br><br>Summer is reaching its end isn't it<br><br>That's right isn't it |
-| ねぇ、いつか大人になったら、僕らどう成るんだろうね<br><br>何かしたいことはあるのかい。僕はそれが見たいかな        | nee, itsuka otona ni nattara, bokura dou narundaro ne<br><br>nanika shitai koto wa aru no kai. boku wa sore ga mitai ka na                       | Hey, if we one day become adults, I wonder who we'll grow into<br><br>So there's something you'd like to do. As for me, I guess I'd like to see that                                      |
-| 君は忘れてしまうだろうけど思い出だけが本当なんだ<br><br>そっか、道の先なら着いて行くよ                  | kimi wa wasureteshimau darou kedo omoide dake ga hontou nanda<br><br>souka, michi no saki nara tsuite iku yo                                     | You'll probably forget, but only memories are real you know<br><br>Oh right, if it's up ahead of the road I'll go with you                                                                |
-| さらさら、さらさら<br><br>さらさら、さらさら<br><br>花風、揺られや一輪草<br><br>言葉は何にもいらないから | sara sara, sara sara<br><br>sara sara, sara sara<br><br>hanakaze, yurare ya ichirinsou<br><br>kotoba wa nani ni mo iranai kara                   | Smoothly, smoothly<br><br>Smoothly, smoothly<br><br>Flower wind, being swayed and anemones<br><br>After all, I don't need words or anything else                                          |
-| 君立つ夏原、髪は靡くまま、泣くや雨催い夕、夕、夕<br><br>夏が終わって往くんだね<br><br>そうなんだね        | kimi tatsu natsuhara, kami wa nabiku mama, naku ya amamoyoi yuu, yuu, yuu<br><br>natsu ga owatte ikunda ne<br><br>sou nanda ne                   | You standing in summer field, whilst your hair waves, crying and the threat of rain evening, evening, evening<br><br>Summer is reaching its end isn't it<br><br>That's right isn't it     |
-| そっか、大人になったんだね                                                    | souka, otona ni nattanda ne                                                                                                                      | Oh right, I grew up didn't I                                                                                                                                                              |
-| はらはら、はらはら、はらり<br><br>晴るる原　君が詠む歌や　一輪草<br><br>他には何にもいらないから         | hara hara hara hara, harari<br><br>haruru hara, kimi ga yomu uta ya ichirinsou<br><br>hoka ni wa nani ni mo iranai kara                          | Gently, gently, gently falling<br><br>Across the clear field, the poems you chant and anemones<br><br>After all, I don't need anything else                                               |
-| 波立つ夏原、涙尽きぬまま泣くや日暮は夕、夕、夕<br><br>夏が終わって往くんだね<br><br>僕はここに残るんだね     | namidatsu natsuhara, namida tsukinu mama naku ya higurashi wa yuu, yuu, yuu<br><br>natsu ga owatte ikunda ne<br><br>boku wa koko ni nokorunda ne | Billowing summer field, whilst tears fail to run dry crying and sunset evening, evening, evening<br><br>Summer is reaching its end isn't it<br><br>And I'll be left here won't I          |
-| ずっと向こうへ往くんだね<br><br>そうなんだね                                       | zutto mukou e ikunda ne<br><br>sou nanda ne                                                                                                      | Always heading in the other direction aren't I<br><br>That's right isn't it                                                                                                               |
+| Japanese                                                         | Romanji                                                                                                                                          | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                 | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html)                                                                                              |
+| ---------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| ねぇ、このまま夜が来たら、僕らどうなるんだろうね<br><br>列車にでも乗って行くかい。僕は何処でもいいかな          | nee, kono mama yoru ga kitara, bokura dou narun darou ne<br><br>ressha ni demo notte iku kai. boku wa dokodemo ii kana                           | Hey, if night comes like this, I wonder what'll become of us<br><br>So you're going to ride the train. As for me, I guess anywhere is fine                                                | Nè bóng đêm cứ vậy mà buông xuống thì chúng ta sẽ ra sao đây ta?<br><br>Em có muốn lên tàu đi đâu đó không?<br>Anh thì đi đâu cũng được hết                        |
+| 君はまだわからないだろうけど、空も言葉で出来てるんだ<br><br>そっか、隣町なら着いて行くよ                 | kimi wa mada wakaranai darou kedo, sora mo kotoba de dekiterunda<br><br>souka, tonarimachi nara tsuite ikuyo                                     | You probably don't understand yet, but the sky is made of words too, you know<br><br>Oh right, if it's the next town over I'll go with you                                                | Có lẽ em không biết nhưng mà<br>Bầu trời kia cũng là ngôn từ tạo nên đấy<br><br>Vậy hả? Anh sẽ đến với em, ở thị trấn bên cạnh                                     |
+| はらはら、はらはら、はらり<br><br>晴るる原　君が詠む歌や　一輪草<br><br>他には何にもいらないから         | hara hara, hara hara, harari<br><br>haruru hara, kimi ga yomu uta ya ichirinsou<br><br>hoka ni wa nan ni mo iranai kara                          | Gently, gently, gently falling<br><br>Across the clear field, the poems you chant and anemones[[#^1]]<br><br>After all, I don't need anything else                                        | Rung rinh rung rinh rung rinh<br><br>Cánh đồng vàng ươm nắng, bài thơ em ngâm, hoa thu mẫu đơn<br><br>Ngoài ra anh chẳng cần gì nữa đâu                            |
+| 波立つ夏原、涙尽きぬまま泣くや日暮は夕、夕、夕<br><br>夏が終わって往くんだね<br><br>そうなんだね         | namidatsu natsuhara, namida tsukinu mama naku ya higurashi wa yuu, yuu, yuu<br><br>natsu ga owatte ikunda ne<br><br>sou nanda ne                 | Billowing summer field, whilst tears fail to run dry crying and sunset[[#^2]] is evening, evening, evening[[#^3]]<br><br>Summer is reaching its end isn't it<br><br>That's right isn't it | Cánh đồng mùa hè gợn sóng<br>Chạng vạng không ngớt tiếng ve khoác rả rích đang vào đêm rồi<br><br>Mùa hè sắp đi đến hồi kết rồi<br><br>Đúng vậy ha em?             |
+| ねぇ、いつか大人になったら、僕らどう成るんだろうね<br><br>何かしたいことはあるのかい。僕はそれが見たいかな        | nee, itsuka otona ni nattara, bokura dou narundaro ne<br><br>nanika shitai koto wa aru no kai. boku wa sore ga mitai ka na                       | Hey, if we one day become adults, I wonder who we'll grow into<br><br>So there's something you'd like to do. As for me, I guess I'd like to see that                                      | Nè em, ngày nào đó khi lớn lên, chúng ta sẽ trờ thành người thế nào đây?<br><br>Có điều gì em muốn làm không?<br>Anh thực sự muốn thiếu điều đó đấy                |
+| 君は忘れてしまうだろうけど思い出だけが本当なんだ<br><br>そっか、道の先なら着いて行くよ                  | kimi wa wasureteshimau darou kedo omoide dake ga hontou nanda<br><br>souka, michi no saki nara tsuite iku yo                                     | You'll probably forget, but only memories are real you know<br><br>Oh right, if it's up ahead of the road I'll go with you                                                                | Có lẽ ngày nào đó em sẽ quên mất nhưng mà<br>Chỉ có ký ức mới nói lên sự thật<br><br>Vậy à? Anh sẽ đến bên em nơi phía cuối con đường                              |
+| さらさら、さらさら<br><br>さらさら、さらさら<br><br>花風、揺られや一輪草<br><br>言葉は何にもいらないから | sara sara, sara sara<br><br>sara sara, sara sara<br><br>hanakaze, yurare ya ichirinsou<br><br>kotoba wa nani ni mo iranai kara                   | Smoothly, smoothly<br><br>Smoothly, smoothly<br><br>Flower wind, being swayed and anemones<br><br>After all, I don't need words or anything else                                          | Rì rào rì rào rì rào rì rào<br><br>Cơn gió mang theo cánh hoa phấp phới; hoa thu mẫu đơn<br><br>Anh chẳng cần ngồn từ nào diễn tả cả                               |
+| 君立つ夏原、髪は靡くまま、泣くや雨催い夕、夕、夕<br><br>夏が終わって往くんだね<br><br>そうなんだね        | kimi tatsu natsuhara, kami wa nabiku mama, naku ya amamoyoi yuu, yuu, yuu<br><br>natsu ga owatte ikunda ne<br><br>sou nanda ne                   | You standing in summer field, whilst your hair waves, crying and the threat of rain evening, evening, evening<br><br>Summer is reaching its end isn't it<br><br>That's right isn't it     | Cánh đồng mùa hạ nơi em đứng<br>Mái tóc tung bay, bầu trời giông bão gầm gừ sắp vào đêm rồi<br><br>Mùa hè sắp đến hồi kết rồi<br><br>Đúng ha em?                   |
+| そっか、大人になったんだね                                                    | souka, otona ni nattanda ne                                                                                                                      | Oh right, I grew up didn't I                                                                                                                                                              | Ừ ha, anh đã trưởng thành rồi nhỉ?                                                                                                                                 |
+| はらはら、はらはら、はらり<br><br>晴るる原　君が詠む歌や　一輪草<br><br>他には何にもいらないから         | hara hara hara hara, harari<br><br>haruru hara, kimi ga yomu uta ya ichirinsou<br><br>hoka ni wa nani ni mo iranai kara                          | Gently, gently, gently falling<br><br>Across the clear field, the poems you chant and anemones<br><br>After all, I don't need anything else                                               | Rung rinh rung rinh rung rinh<br><br>Cánh đồng vào ươm nắng, bài thơ em ngâm, hoa thu mẫu đơn<br><br>Ngoài ra anh chẳng cần gì nữa đâu                             |
+| 波立つ夏原、涙尽きぬまま泣くや日暮は夕、夕、夕<br><br>夏が終わって往くんだね<br><br>僕はここに残るんだね     | namidatsu natsuhara, namida tsukinu mama naku ya higurashi wa yuu, yuu, yuu<br><br>natsu ga owatte ikunda ne<br><br>boku wa koko ni nokorunda ne | Billowing summer field, whilst tears fail to run dry crying and sunset evening, evening, evening<br><br>Summer is reaching its end isn't it<br><br>And I'll be left here won't I          | Cánh đồng mùa hè gợn sóng<br>Chạng vạng không ngớt tiếng ve khoác rả rích đang vào đêm rồi<br><br>Mùa hè sắp đến hồi kết rồi<br><br>Chỉ còn anh ở lại nơi đây thôi |
+| ずっと向こうへ往くんだね<br><br>そうなんだね                                       | zutto mukou e ikunda ne<br><br>sou nanda ne                                                                                                      | Always heading in the other direction aren't I<br><br>That's right isn't it                                                                                                               | Em sẽ mãi đi về phương xa, đúng không?<br><br>Đúng là vậy rồi                                                                                                      |
 ##### Notes
 >Also means “night train”. ^title
 
