--- a/(2020) Plagiarism/14. Ghost in a Flower.md
+++ b/(2020) Plagiarism/14. Ghost in a Flower.md
@@ -1,21 +1,21 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-花に亡霊 | Hana ni Bourei
+花に亡霊 | Hana ni Bourei | Linh hồn trong bông hoa
 #### Lyrics
 
-| Japanese                                                                                                                 | Romanji                                                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                      |
-| ------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| もう忘れてしまったかな<br><br>夏の木陰に座ったまま、氷菓を口に放り込んで風を待っていた                                                                          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta mama, aisu wo kuchi ni hoorikonde kaze wo matteita                                                                                                                                                       | Had I forgotten already<br><br>While sitting under the summer shade of the tree, we stuffed our faces with ice cream and were waiting for a breeze                                                                                                                                                                             |
-| もう忘れてしまったかな　世の中の全部嘘だらけ<br><br>本当の価値を二人で探しに行こうと笑ったこと                                                                      | mou wasurete shimatta ka na yononaka no zenbu usodarake<br><br>hontou no kachi wo futari de sagashi ni ikou to waratta koto                                                                                                                                            | Had I forgotten already, the world is riddled with lies<br><br>And that, while laughing, we promised to go search for true value in it                                                                                                                                                                                         |
-| 忘れないように　色褪せないように<br><br>形に残るものが全てじゃないように                                                                                 | wasurenai you ni iroasenai you ni<br><br>katachi ni nokoru mono ga subete janai you ni                                                                                                                                                                                 | I wish that I won't forget, I wish that it won't fade<br><br>I wish that that which keeps its form isn't everything                                                                                                                                                                                                            |
-| 言葉をもっと教えて　夏が来るって教えて<br><br>僕は描いてる　眼に映ったのは夏の亡霊だ<br><br>風にスカートが揺れて　想い出なんて忘れて<br><br>浅い呼吸をする、汗を拭って夏めく                       | kotoba wo motto oshiete natsu ga kurutte oshiete<br><br>boku wa egaiteru me ni utsutta no wa natsu no bourei da<br><br>kaze ni sukaato ga yurete omoide nante wasurete<br><br>asai kokyuu wo suru, ase wo nugutte natsumeku                                            | Tell me more words, tell me that summer will come<br><br>I'm picturing it now, the summer ghost is what's reflected in my eyes<br><br>Your skirt fluttering in the wind, forgetting all about memories<br><br>I take a shallow breath, then wipe off my sweat; It's becoming like summer                                       |
-| もう忘れてしまったかな<br><br>夏の木陰に座った頃、遠くの丘から顔出した雲があったじゃないか<br><br>君はそれを掴もうとして、馬鹿みたいに空を切った手で<br><br>僕は紙に雲一つを描いて、笑って握って見せて          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta koro, tooku no oka kara kaodashita kumo ga atta janai ka<br><br>kimi wa sore wo tsukamou to shite, baka mitai ni kuu wo kitta te de<br><br>boku wa kami ni kumo hitotsu wo kaite, waratte nigitte misete | Had I forgotten already<br><br>When we were sitting under the summer shade of the tree, the clouds surfaced from across the faraway hill didn't they<br><br>You tried to catch them, with your hand grasping at the sky like an idiot<br><br>I drew down one of the clouds on paper, laughed, grabbed it, and showed it to you |
-| 忘れないように　色褪せないように<br><br>歴史に残るものが全てじゃないから                                                                                 | wasurenai you ni iroasenai you ni<br><br>rekishi ni nokoru mono ga subete janai kara                                                                                                                                                                                   | I wish that I won't forget, I wish that it won't fade<br><br>Because what is left in history isn't everything                                                                                                                                                                                                                  |
-| 今だけ顔も失くして<br><br>言葉も全部忘れて<br><br>君は笑ってる<br><br>夏を待っている僕ら亡霊だ<br><br>心をもっと教えて<br><br>夏の匂いを教えて<br><br>浅い呼吸をする               | ima dake kao mo nakushite<br><br>kotoba mo zenbu wasurete<br><br>kimi wa waratteru<br><br>natsu wo matteiru bokura bourei da<br><br>kokoro wo motto oshiete<br><br>natsu no nioi wo oshiete<br><br>asai kokyuu wo suru                                                 | Only now losing my face as well<br><br>Forgetting our words and everything else<br><br>You're smiling<br><br>We're ghosts waiting for summer<br><br>Tell me more about the heart<br><br>Tell me what summer's scent is<br><br>I take a shallow breath                                                                          |
-| 忘れないように<br><br>色褪せないように<br><br>心に響くものが全てじゃないから                                                                           | wasurenai you ni<br><br>iroasenai you ni<br><br>kokoro ni hibiku mono ga subete janai kara                                                                                                                                                                             | I wish that I won't forget <br><br>I wish that it won't fade<br><br>Because what resonates within me isn't everything                                                                                                                                                                                                          |
-| 言葉をもっと教えて<br><br>さよならだって教えて<br><br>今も見るんだよ<br><br>夏に咲いてる花に亡霊を<br><br>言葉じゃなくて時間を<br><br>時間じゃなくて心を<br><br>浅い呼吸をする、汗を拭って夏めく | kotoba wo motto oshiete<br><br>sayonara datte oshiete<br><br>ima mo mirun da yo<br><br>natsu ni saiteru hana ni bourei wo<br><br>kotoba janakute jikan wo<br><br>jikan janakute kokoro wo<br><br>asai kokyuu wo suru, ase wo nugutte natsumeku                         | Tell me more words<br><br>Tell me goodbye<br><br>I see it now too<br><br>The ghost in the blooming summer flower<br><br>Not at words, but time<br><br>Not at time, but the heart<br><br>I take a shallow breath, then wipe off my sweat; It's becoming like summer                                                             |
-| 夏の匂いがする                                                                                                                  | natsu no nioi ga suru                                                                                                                                                                                                                                                  | It smells like summer                                                                                                                                                                                                                                                                                                          |
-| もう忘れてしまったかな<br><br>夏の木陰に座ったまま、氷菓を口に放り込んで風を待っていた                                                                          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta mama, aisu wo kuchi ni hourikonde kaze wo matteita                                                                                                                                                       | Had I forgotten already<br><br>While sitting under the summer shade of the tree, we stuffed our faces with ice cream and were waiting for a breeze                                                                                                                                                                             |
+| Japanese                                                                                                                 | Romanji                                                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/153g_6DuZVsZOvDAfa7fE-LChko2vfdMZaPwZhAFByjc)                                                                                                                                                                                                                                      | [pikapika](https://pikapika-translate.blogspot.com/p/plagiarism.html)                                                                                                                                                                                                                                                                                                               |
+| ------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| もう忘れてしまったかな<br><br>夏の木陰に座ったまま、氷菓を口に放り込んで風を待っていた                                                                          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta mama, aisu wo kuchi ni hoorikonde kaze wo matteita                                                                                                                                                       | Had I forgotten already<br><br>While sitting under the summer shade of the tree, we stuffed our faces with ice cream and were waiting for a breeze                                                                                                                                                                             | Cậu chắc đã quên rồi chăng?<br><br>Chúng ta lúc ngồi dưới bóng râm mùa hè<br>Bỏ viên kem vào miệng và chờ đợi một làn gió                                                                                                                                                                                                                                                           |
+| もう忘れてしまったかな　世の中の全部嘘だらけ<br><br>本当の価値を二人で探しに行こうと笑ったこと                                                                      | mou wasurete shimatta ka na yononaka no zenbu usodarake<br><br>hontou no kachi wo futari de sagashi ni ikou to waratta koto                                                                                                                                            | Had I forgotten already, the world is riddled with lies<br><br>And that, while laughing, we promised to go search for true value in it                                                                                                                                                                                         | Cậu hẳn đã quên rồi nhỉ?<br>Một thế giới toàn những điều giả dối<br><br>Và chúng ta đùa rằng hãy cùng đi tìm giá trị thật trong đó                                                                                                                                                                                                                                                  |
+| 忘れないように　色褪せないように<br><br>形に残るものが全てじゃないように                                                                                 | wasurenai you ni iroasenai you ni<br><br>katachi ni nokoru mono ga subete janai you ni                                                                                                                                                                                 | I wish that I won't forget, I wish that it won't fade<br><br>I wish that that which keeps its form isn't everything                                                                                                                                                                                                            | Để chúng ta không quên đi, để ký ức không phai màu<br><br>Để những thứu đang hiện hữu trước mắt không phải là tất cả                                                                                                                                                                                                                                                                |
+| 言葉をもっと教えて　夏が来るって教えて<br><br>僕は描いてる　眼に映ったのは夏の亡霊だ<br><br>風にスカートが揺れて　想い出なんて忘れて<br><br>浅い呼吸をする、汗を拭って夏めく                       | kotoba wo motto oshiete natsu ga kurutte oshiete<br><br>boku wa egaiteru me ni utsutta no wa natsu no bourei da<br><br>kaze ni sukaato ga yurete omoide nante wasurete<br><br>asai kokyuu wo suru, ase wo nugutte natsumeku                                            | Tell me more words, tell me that summer will come<br><br>I'm picturing it now, the summer ghost is what's reflected in my eyes<br><br>Your skirt fluttering in the wind, forgetting all about memories<br><br>I take a shallow breath, then wipe off my sweat; It's becoming like summer                                       | Vậy hãy chỉ cho tớ ngôn từ của cậu đi, hãy nói rằng mùa hè sắp đến đi<br><br>Thứ tớ đang vẽ ra, thứ tớ nhìn thấy đều là linh hồn trong bông hoa<br><br>Chân váy tung bay trong gió, tớ sẽ quên đi những kỷ niệm<br><br>Hít một hơi nhẹ, lau đi mồ hôi, hơi thở của mùa hè đến rồi                                                                                                   |
+| もう忘れてしまったかな<br><br>夏の木陰に座った頃、遠くの丘から顔出した雲があったじゃないか<br><br>君はそれを掴もうとして、馬鹿みたいに空を切った手で<br><br>僕は紙に雲一つを描いて、笑って握って見せて          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta koro, tooku no oka kara kaodashita kumo ga atta janai ka<br><br>kimi wa sore wo tsukamou to shite, baka mitai ni kuu wo kitta te de<br><br>boku wa kami ni kumo hitotsu wo kaite, waratte nigitte misete | Had I forgotten already<br><br>When we were sitting under the summer shade of the tree, the clouds surfaced from across the faraway hill didn't they<br><br>You tried to catch them, with your hand grasping at the sky like an idiot<br><br>I drew down one of the clouds on paper, laughed, grabbed it, and showed it to you | Cậu chắc đã quên rồi nhỉ?<br><br>Khi ấy chúng ta ngồi dưới tán cây mùa hè<br>Có một đám mây ló ra từ ngọn đồi phía xa xa đúng không?<br><br>Cậu lại ngờ nghệch vươn tay lên cắt ngang bầu trời định tóm lấy nó<br><br>Còn tớ vẽ một đám mây ra tờ giấy, cưới cưới nắm lấy nó đưa cậu                                                                                                |
+| 忘れないように　色褪せないように<br><br>歴史に残るものが全てじゃないから                                                                                 | wasurenai you ni iroasenai you ni<br><br>rekishi ni nokoru mono ga subete janai kara                                                                                                                                                                                   | I wish that I won't forget, I wish that it won't fade<br><br>Because what is left in history isn't everything                                                                                                                                                                                                                  | Để chúng ta không quên đi, để ký ức không phai màu<br><br>Vì những thứ còn lại trong quá khứ không phải là tất cả                                                                                                                                                                                                                                                                   |
+| 今だけ顔も失くして<br><br>言葉も全部忘れて<br><br>君は笑ってる<br><br>夏を待っている僕ら亡霊だ<br><br>心をもっと教えて<br><br>夏の匂いを教えて<br><br>浅い呼吸をする               | ima dake kao mo nakushite<br><br>kotoba mo zenbu wasurete<br><br>kimi wa waratteru<br><br>natsu wo matteiru bokura bourei da<br><br>kokoro wo motto oshiete<br><br>natsu no nioi wo oshiete<br><br>asai kokyuu wo suru                                                 | Only now losing my face as well<br><br>Forgetting our words and everything else<br><br>You're smiling<br><br>We're ghosts waiting for summer<br><br>Tell me more about the heart<br><br>Tell me what summer's scent is<br><br>I take a shallow breath                                                                          | Nên tớ sẽ bỏ đi khuôn mặt mình ngay lúc này<br><br>Tớ sẽ quên hết ngôn ngữ của mình<br><br>Cậu đang cười kìa<br><br>Chúng ta đều là những linh hồn đang chờ đợi mùa hè đó<br><br>Cho tớ biết thêm về trái tim cậu đi<br><br>Cho tớ biết mùi vị mùa hè đi<br><br>Khẽ hít một hơi nhẹ...                                                                                              |
+| 忘れないように<br><br>色褪せないように<br><br>心に響くものが全てじゃないから                                                                           | wasurenai you ni<br><br>iroasenai you ni<br><br>kokoro ni hibiku mono ga subete janai kara                                                                                                                                                                             | I wish that I won't forget <br><br>I wish that it won't fade<br><br>Because what resonates within me isn't everything                                                                                                                                                                                                          | Để chúng ta không quên đi, để ký ức không phai nhòa<br><br>Vì những thứ vọng đến trái tim tớ không phải là tất cả                                                                                                                                                                                                                                                                   |
+| 言葉をもっと教えて<br><br>さよならだって教えて<br><br>今も見るんだよ<br><br>夏に咲いてる花に亡霊を<br><br>言葉じゃなくて時間を<br><br>時間じゃなくて心を<br><br>浅い呼吸をする、汗を拭って夏めく | kotoba wo motto oshiete<br><br>sayonara datte oshiete<br><br>ima mo mirun da yo<br><br>natsu ni saiteru hana ni bourei wo<br><br>kotoba janakute jikan wo<br><br>jikan janakute kokoro wo<br><br>asai kokyuu wo suru, ase wo nugutte natsumeku                         | Tell me more words<br><br>Tell me goodbye<br><br>I see it now too<br><br>The ghost in the blooming summer flower<br><br>Not at words, but time<br><br>Not at time, but the heart<br><br>I take a shallow breath, then wipe off my sweat; It's becoming like summer                                                             | Vậy nên hãy dạy tớ thêm về ngôn từ của cậu đí<br><br>Cho tớ biết rằng chúng ta sẽ tạm biệt tại đây đi<br><br>Tớ vẫn đang nhìn đó<br><br>Nhìn linh hồn trong bông hoa nở vào mùa hè<br><br>Tớ nhìn vào thời gian, chứ không phải ngôn từ<br><br>Mà cũng không phải thời gian, tớ nhìn vào trái tim cậu đó<br><br>Hít một hơi thật nhẹ, lau đi mồ hôi, hơi thở của mùa hè đến bên rồi |
+| 夏の匂いがする                                                                                                                  | natsu no nioi ga suru                                                                                                                                                                                                                                                  | It smells like summer                                                                                                                                                                                                                                                                                                          | Tớ thấy mùi hương của mùa hè rồi                                                                                                                                                                                                                                                                                                                                                    |
+| もう忘れてしまったかな<br><br>夏の木陰に座ったまま、氷菓を口に放り込んで風を待っていた                                                                          | mou wasurete shimatta ka na<br><br>natsu no kokage ni suwatta mama, aisu wo kuchi ni hourikonde kaze wo matteita                                                                                                                                                       | Had I forgotten already<br><br>While sitting under the summer shade of the tree, we stuffed our faces with ice cream and were waiting for a breeze                                                                                                                                                                             | Cậu chắc đã quên rồi đúng không?<br><br>Khi chúng ta mải ngồi dưới tán cây mùa hè<br>Bỏ viên kem vào miệng và chờ đợi một làn gió                                                                                                                                                                                                                                                   |
 ##### Notes
 >
